Published multiple files

--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари).md
@@ -2,30 +2,30 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-02-zemlya-kak-konczept-delyoz-i-gvattari/"}
 ---
 
-# Лекция 2: Земля как концепт. Делёз и Гваттари
+# Лекция 2: Земля как концепт Делёз и Гваттари
 
 **Основные понятия:** [[Земля vs Территория\|Земля vs Территория]], [[Детерриторизация\|Детерриторизация]], [[Кейс база знаний/3 Понятия/Ризома\|Ризома]], [[Ритурнель\|Ритурнель]], [[Тело без органов\|Тело без органов]], [[Шизоанализ\|Шизоанализ]]
 **Ключевые авторы:** [[Жиль Делёз\|Жиль Делёз]], [[Феликс Гваттари\|Феликс Гваттари]], [[Фридрих Ницше\|Фридрих Ницше]]
 
 ## Тезисы
 
-### 1. Путь к геофилософии
-- [[Жиль Делёз\|Делёз]] начинает свой путь с истории философии, но уже в ранней работе о [[Фридрих Ницше\|Ницше]] (1962) появляются ключевые темы: **"чувство земли"** как ощущение активных сил и **"легкость"** земли как преодоление границ.
-- В "Логике смысла" (1968) вводится оппозиция **[[Кейс база знаний/3 Понятия/Поверхность vs Глубина\|Поверхность vs Глубина]]**. Философия должна оставаться на поверхности, где происходят события, а не проваливаться в глубину. Земля здесь — не одна из стихий, а то, в чем сходятся все стихии, "огромное тело, которое удерживает стихии".
-- В эссе об островах география напрямую связывается с воображаемым. Бессознательное бредит не об Эдипе, а о континентах, расах и племенах.
+### 1 Путь к геофилософии
+- [[Жиль Делёз\|Делёз]] начинает свой путь с истории философии, но уже в ранней работе о [[Фридрих Ницше\|Ницше]] (1962) появляются ключевые темы: **"чувство земли"** как ощущение активных сил и **"легкость"** земли как преодоление границ
+- В "Логике смысла" (1968) вводится оппозиция **[[Кейс база знаний/3 Понятия/Поверхность vs Глубина\|Поверхность vs Глубина]]** Философия должна оставаться на поверхности, где происходят события, а не проваливаться в глубину Земля здесь — не одна из стихий, а то, в чем сходятся все стихии, "огромное тело, которое удерживает стихии"
+- В эссе об островах география напрямую связывается с воображаемым Бессознательное бредит не об Эдипе, а о континентах, расах и племенах
 
-### 2. "Анти-Эдип": Машины и территории
-- **[[Шизоанализ\|Шизоанализ]] vs. Психоанализ**: "Прогулка шизофреника" — это практика **[[Детерриторизация\|детерриторизации]]**, создания новой земли с каждым шагом.
-- **Машинная онтология**: Все есть машины желания, потоки и срезы. Земля — это тоже производящая машина, **[[Тело без органов\|Тело без органов]]**.
+### 2 "Анти-Эдип": Машины и территории
+- **[[Шизоанализ\|Шизоанализ]] vs Психоанализ**: "Прогулка шизофреника" — это практика **[[Детерриторизация\|детерриторизации]]**, создания новой земли с каждым шагом
+- **Машинная онтология**: Все есть машины желания, потоки и срезы Земля — это тоже производящая машина, **[[Тело без органов\|Тело без органов]]**
 - **[[Земля vs Территория\|Земля vs Территория]]**:
-    - **Территория**: Ограниченное, кодированное, размеченное пространство (например, государство).
-    - **Земля**: Детерриторизированное пространство, линии ускользания, то, что не позволяет превратить себя в карту или территорию.
+    - **Территория**: Ограниченное, кодированное, размеченное пространство (например, государство)
+    - **Земля**: Детерриторизированное пространство, линии ускользания, то, что не позволяет превратить себя в карту или территорию
 
-### 3. "Тысяча плато": Ризома и номадизм
-- **[[Кейс база знаний/3 Понятия/Ризома\|Ризома]]**: Способ организации, противопоставленный древовидной иерархии. Ризома не имеет центра, растет в разные стороны и находится под землей.
-- **[[Ритурнель\|Ритурнель]]**: Песенка, которой мы размечаем территорию (например, напеваем в темном переулке). Ритурнель всегда "уносит землю с собой", противостоит хаосу, но и не создает жестких границ.
-- **Номадизм**: Это не кочевничество, а "путешествие на месте". Намад — тот, кто детерриторизирует пространство, оставаясь в одной точке.
+### 3 "Тысяча плато": Ризома и номадизм
+- **[[Кейс база знаний/3 Понятия/Ризома\|Ризома]]**: Способ организации, противопоставленный древовидной иерархии Ризома не имеет центра, растет в разные стороны и находится под землей
+- **[[Ритурнель\|Ритурнель]]**: Песенка, которой мы размечаем территорию (например, напеваем в темном переулке) Ритурнель всегда "уносит землю с собой", противостоит хаосу, но и не создает жестких границ
+- **Номадизм**: Это не кочевничество, а "путешествие на месте" Намад — тот, кто детерриторизирует пространство, оставаясь в одной точке
 
-### 4. "Что такое философия?": Рождение геофилософии
-- **Философия — это творчество концептов**.
-- **Геофилософия**: Любая философия является геофилософией. Она рождается в конкретном месте (Древняя Греция) из зазора между Землей и Территорией.
+### 4 "Что такое философия?": Рождение геофилософии
+- **Философия — это творчество концептов**
+- **Геофилософия**: Любая философия является геофилософией Она рождается в конкретном месте (Древняя Греция) из зазора между Землей и Территорией
