--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард).md
@@ -2,32 +2,32 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-03-zemlya-bez-osnovanij-shelling-i-vudard/"}
 ---
 
-# Лекция 3: Земля без оснований. Как не провалиться в бездну?
+# Лекция 3: Земля без оснований Как не провалиться в бездну?
 
 **Основные понятия:** [[Кейс база знаний/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]], [[Темная геофилософия\|Темная геофилософия]], [[Геологическое как бессознательное\|Геологическое как бессознательное]]
 **Ключевые авторы:** [[Бен Вудард\|Бен Вудард]], [[Фридрих Шеллинг\|Фридрих Шеллинг]], [[Жиль Делёз\|Жиль Делёз]], [[Иммануил Кант\|Иммануил Кант]]
 
 ## Тезисы
 
-### 1. Обоснование vs. Основание
-- Существует различие между **основанием (Grund)** и **обоснованием (Begründung)**.
-- **Основание** — это мифический, не требующий доказательств исток.
-- **Обоснование** — это рациональная, философская попытка доказать, на чем все держится.
-- **Парадокс**: Любое рациональное **обоснование** в конечном счете упирается в **[[Безосновность (Грунд)\|безосновность]]**.
-- **Формула:** Безосновность есть основание обоснованного.
+### 1 Обоснование vs Основание
+- Существует различие между **основанием (Grund)** и **обоснованием (Begründung)**
+- **Основание** — это мифический, не требующий доказательств исток
+- **Обоснование** — это рациональная, философская попытка доказать, на чем все держится
+- **Парадокс**: Любое рациональное **обоснование** в конечном счете упирается в **[[Безосновность (Грунд)\|безосновность]]**
+- **Формула:** Безосновность есть основание обоснованного
 
-### 2. [[Фридрих Шеллинг\|Фридрих Шеллинг]] и темный исток
-- [[Фридрих Шеллинг\|Шеллинг]] говорит о **бездне (Ungrund)** как о темном, иррациональном начале.
-- На него влияет зарождающаяся геология ([[Джеймс Хаттон\|Джеймс Хаттон]]). Открытие **глубинного времени (Deep Time)** отменяет идею единого акта творения.
-- Шеллинг пишет: **"Земля — это книга, составленная из обломков и рапсодий очень разных времен"**.
-- В тексте "Клара" Шеллинг показывает, что основания чувств могут лежать не в субъекте, а в объекте: цветок пахнет печалью, потому что **он сам печален**.
+### 2 [[Фридрих Шеллинг\|Фридрих Шеллинг]] и темный исток
+- [[Фридрих Шеллинг\|Шеллинг]] говорит о **бездне (Ungrund)** как о темном, иррациональном начале
+- На него влияет зарождающаяся геология ([[Джеймс Хаттон\|Джеймс Хаттон]]) Открытие **глубинного времени (Deep Time)** отменяет идею единого акта творения
+- Шеллинг пишет: **"Земля — это книга, составленная из обломков и рапсодий очень разных времен"**
+- В тексте "Клара" Шеллинг показывает, что основания чувств могут лежать не в субъекте, а в объекте: цветок пахнет печалью, потому что **он сам печален**
 
-### 3. [[Жиль Делёз\|Жиль Делёз]] и изобретение оснований
-- В курсе "Что такое обоснование?" [[Жиль Делёз\|Делёз]] рассматривает обоснование как **испытание** и **изобретение**.
-- Обоснование — это **повторение, но всегда новое**, связанное с воображением.
-- [[Бен Вудард\|Вудард]] связывает это с идеей, что **геологическое связано с воображаемым**.
+### 3 [[Жиль Делёз\|Жиль Делёз]] и изобретение оснований
+- В курсе "Что такое обоснование?" [[Жиль Делёз\|Делёз]] рассматривает обоснование как **испытание** и **изобретение**
+- Обоснование — это **повторение, но всегда новое**, связанное с воображением
+- [[Бен Вудард\|Вудард]] связывает это с идеей, что **геологическое связано с воображаемым**
 
-### 4. [[Бен Вудард\|Бен Вудард]] и [[Темная геофилософия\|Темная геофилософия]]
-- **[[Геологическое как бессознательное\|Геологическое как бессознательное]]**: Геологические процессы — это то безосновное, что влияет на нас, но не поддается полному осмыслению.
-- Вудард критикует [[Жиль Делёз\|Делёза]] за то, что его геофилософия слишком привязана к **"человеческой поверхности"**.
-- **Итог**: Провалиться в бездну — это и есть необходимый геофилософский опыт.
+### 4 [[Бен Вудард\|Бен Вудард]] и [[Темная геофилософия\|Темная геофилософия]]
+- **[[Геологическое как бессознательное\|Геологическое как бессознательное]]**: Геологические процессы — это то безосновное, что влияет на нас, но не поддается полному осмыслению
+- Вудард критикует [[Жиль Делёз\|Делёза]] за то, что его геофилософия слишком привязана к **"человеческой поверхности"**
+- **Итог**: Провалиться в бездну — это и есть необходимый геофилософский опыт
