--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога).md
@@ -9,24 +9,24 @@
 
 ## Тезисы
 
-### 1. Что такое [[Кейс база знаний/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]?
-- Это **"топология философского мышления"**. Проект [[Валерий Подорога\|Валерия Подороги]] исследует, как пространство, ландшафт и телесная ориентация мыслителя влияют на его философию.
-- **Всякая мысль пространственна**.
+### 1 Что такое [[Кейс база знаний/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]?
+- Это **"топология философского мышления"** Проект [[Валерий Подорога\|Валерия Подороги]] исследует, как пространство, ландшафт и телесная ориентация мыслителя влияют на его философию
+- **Всякая мысль пространственна**
 
-### 2. Из чего состоит [[Ландшафт\|Ландшафт]]?
-- Это сложный синтез, который Подорога называет **"[[Земля произведений\|Земля произведений]]"**. Он включает:
-    - **Автор**: Его биография, тело, болезни.
-    - **Атрибуты**: Внешние объекты, определяющие философа (например, вулкан для Эмпедокла).
-    - **География**: Конкретные места (горы, леса, города).
-    - **Концепты**: Идеи, которые рождаются в этом ландшафте.
-    - **Текст**: Произведение, которое собирает все эти элементы.
+### 2 Из чего состоит [[Ландшафт\|Ландшафт]]?
+- Это сложный синтез, который Подорога называет **"[[Земля произведений\|Земля произведений]]"** Он включает:
+    - **Автор**: Его биография, тело, болезни
+    - **Атрибуты**: Внешние объекты, определяющие философа (например, вулкан для Эмпедокла)
+    - **География**: Конкретные места (горы, леса, города)
+    - **Концепты**: Идеи, которые рождаются в этом ландшафте
+    - **Текст**: Произведение, которое собирает все эти элементы
 
-### 3. Ландшафтный анализ философов
+### 3 Ландшафтный анализ философов
 - **[[Сёрен Кьеркегор\|Сёрен Кьеркегор]] и Земля-море**:
-    - Ландшафт Кьеркегора — это **гора Мориа**, к которой он совершал экзистенциальное путешествие через **"задержанное дыхание Авраама"**.
+    - Ландшафт Кьеркегора — это **гора Мориа**, к которой он совершал экзистенциальное путешествие через **"задержанное дыхание Авраама"**
 - **[[Фридрих Ницше\|Фридрих Ницше]] и Энгадин**:
-    - Идея **вечного возвращения** приходит к Ницше у конкретного **камня в Зильс-Марии**, конденсируясь из телесного опыта в ландшафте.
-    - **Критика "твердой земли"**: Болезнь заставляет Ницше ощущать тяжесть гравитации.
+    - Идея **вечного возвращения** приходит к Ницше у конкретного **камня в Зильс-Марии**, конденсируясь из телесного опыта в ландшафте
+    - **Критика "твердой земли"**: Болезнь заставляет Ницше ощущать тяжесть гравитации
 - **[[Мартин Хайдеггер\|Мартин Хайдеггер]] и Шварцвальд**:
-    - Его философия [[Четверица\|четверицы]] неразрывно связана с ландшафтом "темного леса" и его хижины.
-    - **Персонификация Земли**: Чтобы понять Хайдеггера, нужно "стать тектоническими существами".
+    - Его философия [[Четверица\|четверицы]] неразрывно связана с ландшафтом "темного леса" и его хижины
+    - **Персонификация Земли**: Чтобы понять Хайдеггера, нужно "стать тектоническими существами"
