--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md.md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-06-fenomenologiya-zemli-gusserl-merlo-ponti-derrida/"}
+{"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)md","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-06-fenomenologiya-zemli-gusserl-merlo-ponti-derrida-md/"}
 ---
 
 # Лекция 6: Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)
@@ -9,21 +9,21 @@
 
 ## Тезисы
 
-### 1. [[Эдмунд Гуссерль\|Эдмунд Гуссерль]]: Земля как первый ковчег
-- На фоне "кризиса европейских наук" Гуссерль ищет новые основания для опыта.
-- Он совершает **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: возвращается к Земле как к основе.
+### 1 [[Эдмунд Гуссерль\|Эдмунд Гуссерль]]: Земля как первый ковчег
+- На фоне "кризиса европейских наук" Гуссерль ищет новые основания для опыта
+- Он совершает **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: возвращается к Земле как к основе
 - **Земля как "перво-ковчег" (Ur-Arche)**:
-    - Это **"прародина"** и **"сверх-тело"**.
-    - Она обеспечивает **покой**, на фоне которого возможно движение.
+    - Это **"прародина"** и **"сверх-тело"**
+    - Она обеспечивает **покой**, на фоне которого возможно движение
 
-### 2. [[Морис Мерло-Понти\|Морис Мерло-Понти]]: [[Кейс база знаний/3 Понятия/Плоть мира\|Плоть мира]] и [[Кейс база знаний/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]
-- **Земля как гиперболизированная телесность**: Она является **"[[Кейс база знаний/3 Понятия/Плоть мира\|плотью мира]]"**.
+### 2 [[Морис Мерло-Понти\|Морис Мерло-Понти]]: [[Кейс база знаний/3 Понятия/Плоть мира\|Плоть мира]] и [[Кейс база знаний/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]
+- **Земля как гиперболизированная телесность**: Она является **"[[Кейс база знаний/3 Понятия/Плоть мира\|плотью мира]]"**
 - **[[Кейс база знаний/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]**:
-    - **[[Феноменология как археология\|Феноменология как археология]]**: Мерло-Понти предлагает исследовать "слои" опыта.
-    - **[[Оседание опыта\|Оседание опыта]]**: Глобальный, геологический опыт Земли "оседает" во множестве локальных опытов.
-    - **Сплетение времени и пространства**: Земля — это место, где сплетаются историчность и природность.
+    - **[[Феноменология как археология\|Феноменология как археология]]**: Мерло-Понти предлагает исследовать "слои" опыта
+    - **[[Оседание опыта\|Оседание опыта]]**: Глобальный, геологический опыт Земли "оседает" во множестве локальных опытов
+    - **Сплетение времени и пространства**: Земля — это место, где сплетаются историчность и природность
 
-### 3. [[Жак Деррида\|Жак Деррида]]: Геометрия и письмо
-- Идеальные геометрические формы существуют и передаются только благодаря **письму**.
-- **[[Оседание опыта\|Осадки]] истории**: Этот процесс передачи подобен геологическим "осадкам".
-- **[[Трансцендентальная Земля\|Трансцендентальная Земля]]**: [[Жак Деррида\|Деррида]] утверждает, что Земля как таковая **превосходит любую объективацию**.
+### 3 [[Жак Деррида\|Жак Деррида]]: Геометрия и письмо
+- Идеальные геометрические формы существуют и передаются только благодаря **письму**
+- **[[Оседание опыта\|Осадки]] истории**: Этот процесс передачи подобен геологическим "осадкам"
+- **[[Трансцендентальная Земля\|Трансцендентальная Земля]]**: [[Жак Деррида\|Деррида]] утверждает, что Земля как таковая **превосходит любую объективацию**
