--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур).md
@@ -9,20 +9,20 @@
 
 ## Тезисы
 
-### 1. [[Джеймс Лавлок\|Джеймс Лавлок]] и [[Теория Геи\|Теория Геи]]
-- **[[Теория Геи\|Теория Геи]]**: Земля — это единая, саморегулирующаяся система (или организм), которая поддерживает условия для жизни.
-- **[[Маргаритковый мир\|Маргаритковый мир]]**: Модель для иллюстрации теории, где черные и белые маргаритки совместно регулируют температуру планеты.
-- **Критика теории**: Технофобность, антропоцентризм, метафоричность.
-- **Альтернатива — [[Теория Медеи\|Теория Медеи]]**: Жизнь на Земле существует вопреки постоянным процессам самоуничтожения.
+### 1 [[Джеймс Лавлок\|Джеймс Лавлок]] и [[Теория Геи\|Теория Геи]]
+- **[[Теория Геи\|Теория Геи]]**: Земля — это единая, саморегулирующаяся система (или организм), которая поддерживает условия для жизни
+- **[[Маргаритковый мир\|Маргаритковый мир]]**: Модель для иллюстрации теории, где черные и белые маргаритки совместно регулируют температуру планеты
+- **Критика теории**: Технофобность, антропоцентризм, метафоричность
+- **Альтернатива — [[Теория Медеи\|Теория Медеи]]**: Жизнь на Земле существует вопреки постоянным процессам самоуничтожения
 
-### 2. [[Бруно Латур\|Бруно Латур]]: от [[Гея\|Геи]] к [[Кейс база знаний/3 Понятия/Геоистория\|Геоистории]]
-- **[[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]**: [[Бруно Латур\|Латур]] призывает перейти от "истории" (где Земля — пассивный фон) к "геоистории", где Земля — **полноценный действующий актор**.
-- **Проклятие Атласа**: Латур критикует традиционную репрезентацию Земли (глобус) за то, что она представляет планету как гладкий, безпроблемный объем.
+### 2 [[Бруно Латур\|Бруно Латур]]: от [[Гея\|Геи]] к [[Кейс база знаний/3 Понятия/Геоистория\|Геоистории]]
+- **[[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]**: [[Бруно Латур\|Латур]] призывает перейти от "истории" (где Земля — пассивный фон) к "геоистории", где Земля — **полноценный действующий актор**
+- **Проклятие Атласа**: Латур критикует традиционную репрезентацию Земли (глобус) за то, что она представляет планету как гладкий, безпроблемный объем
 
-### 3. [[Приземленные\|Приземленные]] и [[Кейс база знаний/2 Темы/Политическая земля\|Политическая земля]]
-- **Переход от "людей" к "приземленным"**: "Приземленные" — те, кто осознал свою неразрывную связь с Землей и ее процессами.
-- **Земля — не мирная мать-природа**: Она находится в состоянии войны с человечеством.
-- **Вопрос о договоре**: Латур ставит вопрос, можно ли заключить новый политический договор с самой Землей.
+### 3 [[Приземленные\|Приземленные]] и [[Кейс база знаний/2 Темы/Политическая земля\|Политическая земля]]
+- **Переход от "людей" к "приземленным"**: "Приземленные" — те, кто осознал свою неразрывную связь с Землей и ее процессами
+- **Земля — не мирная мать-природа**: Она находится в состоянии войны с человечеством
+- **Вопрос о договоре**: Латур ставит вопрос, можно ли заключить новый политический договор с самой Землей
 
-### 4. [[Юк Хуэй\|Юк Хуэй]]: [[Искусственная земля\|Искусственная земля]]
-- **[[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]]** — это завершение создания **[[Искусственная земля\|искусственной земли]]** как кибернетической системы. Благодаря технологиям, Земля впервые "увидела" себя.
+### 4 [[Юк Хуэй\|Юк Хуэй]]: [[Искусственная земля\|Искусственная земля]]
+- **[[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]]** — это завершение создания **[[Искусственная земля\|искусственной земли]]** как кибернетической системы Благодаря технологиям, Земля впервые "увидела" себя
