--- a/src/site/notes/Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур).md
+++ b/src/site/notes/Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур).md
@@ -2,27 +2,27 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур)","permalink":"/kejs-baza-znanij/1-lekczii/lekcziya-08-politicheskaya-zemlya-shmitt-i-latur/"}
 ---
 
-# Лекция 8: Политическая Земля. Шмитт и Латур
+# Лекция 8: Политическая Земля Шмитт и Латур
 
 **Основные понятия:** [[Кейс база знаний/2 Темы/Политическая земля\|Политическая земля]], [[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]], [[Суверенитет\|Суверенитет]], [[Чрезвычайное положение\|Чрезвычайное положение]], [[Анти-законы\|Анти-законы]]
 **Ключевые авторы:** [[Карл Шмитт\|Карл Шмитт]], [[Бруно Латур\|Бруно Латур]], [[Рене Декарт\|Рене Декарт]]
 
 ## Тезисы
 
-### 1. Переход к [[Кейс база знаний/2 Темы/Политическая земля\|политической Земле]]
-- [[Бруно Латур\|Латур]] описывает Землю ([[Гея\|Гея]]) как новую **политическую сущность**, которая проявляет **[[Суверенитет\|суверенитет]]**.
+### 1 Переход к [[Кейс база знаний/2 Темы/Политическая земля\|политической Земле]]
+- [[Бруно Латур\|Латур]] описывает Землю ([[Гея\|Гея]]) как новую **политическую сущность**, которая проявляет **[[Суверенитет\|суверенитет]]**
 - Возникает вопрос: можно ли заключить с ней **договор или контракт**?
 
-### 2. [[Карл Шмитт\|Карл Шмитт]] и [[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]
-- **[[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]** — это уникальный пространственный порядок, который определяет территорию, законы и границы общества.
-- **Оппозиция Море vs. Суша**: Для [[Карл Шмитт\|Шмитта]] море является свободным, не поддающимся государственному порядку пространством.
-- **Два типа земли**: Шмитт разделял землю на "цивилизованную" европейскую и "колониальную" землю, которая считалась зоной свободного захвата.
+### 2 [[Карл Шмитт\|Карл Шмитт]] и [[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]
+- **[[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]** — это уникальный пространственный порядок, который определяет территорию, законы и границы общества
+- **Оппозиция Море vs Суша**: Для [[Карл Шмитт\|Шмитта]] море является свободным, не поддающимся государственному порядку пространством
+- **Два типа земли**: Шмитт разделял землю на "цивилизованную" европейскую и "колониальную" землю, которая считалась зоной свободного захвата
 
-### 3. [[Суверенитет\|Суверенитет]], [[Чрезвычайное положение\|Чрезвычайное положение]] и бессилие
-- **Тезис Шмитта**: "Суверен тот, кто принимает решение о [[Чрезвычайное положение\|чрезвычайном положении]]".
-- **Парадокс вечных истин** ([[Рене Декарт\|Декарт]]): Если Бог (суверен) создал вечные законы, может ли он их изменить? Если может — они не вечны. Если не может — он не всесилен.
+### 3 [[Суверенитет\|Суверенитет]], [[Чрезвычайное положение\|Чрезвычайное положение]] и бессилие
+- **Тезис Шмитта**: "Суверен тот, кто принимает решение о [[Чрезвычайное положение\|чрезвычайном положении]]"
+- **Парадокс вечных истин** ([[Рене Декарт\|Декарт]]): Если Бог (суверен) создал вечные законы, может ли он их изменить? Если может — они не вечны Если не может — он не всесилен
 
-### 4. Изобретая автономную Землю
-- **Земля как Бог-суверен**: Чтобы помыслить автономию Земли, нужно соединить политическую теологию и политическую землю.
-    - **Земля не устанавливает "законов"**, с ней нельзя заключить договор. У нее есть **[[Анти-законы\|Анти-законы]]** — непредсказуемые катастрофы.
-    - **Земля сама реализует решение о [[Чрезвычайное положение\|чрезвычайном положении]]** в виде пандемий, вымирания и т.д.
+### 4 Изобретая автономную Землю
+- **Земля как Бог-суверен**: Чтобы помыслить автономию Земли, нужно соединить политическую теологию и политическую землю
+    - **Земля не устанавливает "законов"**, с ней нельзя заключить договор У нее есть **[[Анти-законы\|Анти-законы]]** — непредсказуемые катастрофы
+    - **Земля сама реализует решение о [[Чрезвычайное положение\|чрезвычайном положении]]** в виде пандемий, вымирания и тд
