--- a/src/site/notes/Кейс база знаний/2 Темы/Политическая земля.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Политическая земля.md
@@ -4,17 +4,17 @@
 
 # Политическая земля
 
-**Политическая земля** — это концепция, рассматривающая [[Земля\|Землю]] не как пассивный объект или ресурс для человеческой политики, а как **активного политического агента**, обладающего собственным [[Суверенитет\|суверенитетом]][cite: 297, 327].
+**Политическая земля** — это концепция, рассматривающая [[Земля\|Землю]] не как пассивный объект или ресурс для человеческой политики, а как **активного политического агента**, обладающего собственным [[Суверенитет\|суверенитетом]] 
 
 ## Истоки концепции
-- **[[Бруно Латур\|Бруно Латур]]**: Вводит понятие [[Кейс база знаний/3 Понятия/Геоистория\|геоистории]], где Земля становится действующим лицом в политических процессах[cite: 33]. Он задается вопросом, можно ли заключить с ней новый "природный контракт"[cite: 298].
-- **[[Карл Шмитт\|Карл Шмитт]]**: Его работа "[[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]" является ключевым источником для осмысления политической земли. [[Кейс база знаний/3 Понятия/Номос земли\|Номос]] — это изначальный пространственный порядок, который лежит в основе любого закона[cite: 306].
+- **[[Бруно Латур\|Бруно Латур]]**: Вводит понятие [[Кейс база знаний/3 Понятия/Геоистория\|геоистории]], где Земля становится действующим лицом в политических процессах  Он задается вопросом, можно ли заключить с ней новый "природный контракт" 
+- **[[Карл Шмитт\|Карл Шмитт]]**: Его работа "[[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]]" является ключевым источником для осмысления политической земли [[Кейс база знаний/3 Понятия/Номос земли\|Номос]] — это изначальный пространственный порядок, который лежит в основе любого закона 
 
 ## Земля как суверен
-- **[[Суверенитет\|Суверенитет]]**: В лекциях предлагается помыслить Землю как суверена в смысле [[Карл Шмитт\|Карла Шмитта]]: **"суверен тот, кто принимает решение о [[Чрезвычайное положение\|чрезвычайном положении]]"**[cite: 332].
-- **Земля и [[Чрезвычайное положение\|чрезвычайное положение]]**: Земля сама, без оглядки на человека, **реализует решение о чрезвычайном положении** через глобальные катастрофы, пандемии, извержения вулканов или вымирание видов[cite: 339, 343].
-- **[[Анти-законы\|Анти-законы]] Земли**: С Землей **нельзя заключить договор**, потому что у нее нет предсказуемых "законов" в человеческом смысле[cite: 341, 345]. У нее есть "анти-законы" — события, которые происходят с необходимостью, но непредсказуемо, и могут привести к радикальному завершению жизни[cite: 344].
+- **[[Суверенитет\|Суверенитет]]**: В лекциях предлагается помыслить Землю как суверена в смысле [[Карл Шмитт\|Карла Шмитта]]: **"суверен тот, кто принимает решение о [[Чрезвычайное положение\|чрезвычайном положении]]"** 
+- **Земля и [[Чрезвычайное положение\|чрезвычайное положение]]**: Земля сама, без оглядки на человека, **реализует решение о чрезвычайном положении** через глобальные катастрофы, пандемии, извержения вулканов или вымирание видов 
+- **[[Анти-законы\|Анти-законы]] Земли**: С Землей **нельзя заключить договор**, потому что у нее нет предсказуемых "законов" в человеческом смысле  У нее есть "анти-законы" — события, которые происходят с необходимостью, но непредсказуемо, и могут привести к радикальному завершению жизни 
 
 ## Значение
-- Эта концепция позволяет помыслить **неантропоцентричную политическую сущность Земли**[cite: 340].
-- Она показывает, что экологический кризис — это не просто техническая проблема, а **состояние войны**, в котором Земля выступает как одна из воюющих сторон[cite: 343].
+- Эта концепция позволяет помыслить **неантропоцентричную политическую сущность Земли** 
+- Она показывает, что экологический кризис — это не просто техническая проблема, а **состояние войны**, в котором Земля выступает как одна из воюющих сторон 
