--- a/src/site/notes/Кейс база знаний/3 Понятия/Автохтония.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Автохтония.md
@@ -4,16 +4,15 @@
 
 # Автохтония
 
-**Автохтония** — в контексте [[геофилософия\|геофилософии]] [[Жиль Делёз\|Делёза]] и [[Феликс Гваттари\|Гваттари]] — это **независимость от конкретной территории**. Это способность народа или концептуальной общности существовать, сохраняя свою идентичность, вне привязки к определенному географическому месту.
+**Автохтония** — в контексте [[геофилософия\|геофилософии]] [[Жиль Делёз\|Делёза]] и [[Феликс Гваттари\|Гваттари]] — это **независимость от конкретной территории** Это способность народа или концептуальной общности существовать, сохраняя свою идентичность, вне привязки к определенному географическому месту.
 
 ## Суть концепции
 - **[[Земля vs Территория\|Земля vs Территория]]**: Автохтония связана с [[Земля\|Землей]] как концептуальным, детерриторизированным пространством, а не с [[Кейс база знаний/3 Понятия/Территория\|Территорией]] как физически ограниченной и кодированной областью.
-- **Освобождение**: Достижение автохтонии — это акт освобождения и **[[Детерриторизация\|детерриторизации]]**.
-
+- **Освобождение**: Достижение автохтонии — это акт освобождения и **[[Детерриторизация\|детерриторизации]]**
 ## Пример: Асгард в "Тор: Рагнарёк"
 В лекции приводится пример из фильма, который иллюстрирует эту идею:
-- **Территория**: Физическое место Асгард, которое питает силой богиню смерти Хелу.
+- **Территория**: Физическое место Асгард, которое питает силой богиню смерти Хелу
 - **Земля**: Народ Асгарда, асгардцы.
-- **Действие**: Тор понимает, что для победы нужно пожертвовать территорией, чтобы спасти землю (народ). Он увозит асгардцев с планеты, достигая автохтонии — Асгард продолжает существовать как народ, независимый от своего бывшего места. Территория уничтожается Рагнарёком, а вместе с ней и привязанная к ней Хела.
+- **Действие**: Тор понимает, что для победы нужно пожертвовать территорией, чтобы спасти землю (народ) Он увозит асгардцев с планеты, достигая автохтонии — Асгард продолжает существовать как народ, независимый от своего бывшего места. Территория уничтожается Рагнарёком, а вместе с ней и привязанная к ней Хела.
 
 
