--- a/src/site/notes/Кейс база знаний/3 Понятия/Геоистория.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Геоистория.md
@@ -5,13 +5,13 @@
 
 # Геоистория
 
-**Геоистория** — это концепт, предложенный [[Бруно Латур\|Бруно Латуром]] для переосмысления истории. Он заключается в том, чтобы рассматривать [[Земля\|Землю]] и ее процессы не как пассивный фон (декорацию) для человеческой деятельности, а как **активного и полноправного участника** исторических событий[cite: 586, 601].
+**Геоистория** — это концепт, предложенный [[Бруно Латур\|Бруно Латуром]] для переосмысления истории Он заключается в том, чтобы рассматривать [[Земля\|Землю]] и ее процессы не как пассивный фон (декорацию) для человеческой деятельности, а как **активного и полноправного участника** исторических событий 
 
 ## Ключевые принципы
-- **Земля как актор**: [[Гея\|Гея]] (в понимании [[Теория Геи\|теории Геи]]) перестает быть просто сценой и становится действующим лицом, которое влияет на политику, экономику и общество[cite: 586].
-- **Соединение политики и природы**: Геоистория призвана преодолеть новоевропейский разрыв между политикой и природой, показывая их неразрывную связь[cite: 589, 592].
-- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Геоистория способствует [[Антикоперниканский поворот\|антикоперниканскому повороту]], смещая фокус с исключительно человеческих дел на взаимоотношения людей и не-людей в рамках планетарных процессов.
-- **Новый климатический режим**: Концепция геоистории возникает в контексте [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]], когда становится очевидно, что Земля "отвечает" на действия человека, и мы вступаем во "всеобщее состояние войны" с планетой[cite: 603, 621].
+- **Земля как актор**: [[Гея\|Гея]] (в понимании [[Теория Геи\|теории Геи]]) перестает быть просто сценой и становится действующим лицом, которое влияет на политику, экономику и общество 
+- **Соединение политики и природы**: Геоистория призвана преодолеть новоевропейский разрыв между политикой и природой, показывая их неразрывную связь 
+- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Геоистория способствует [[Антикоперниканский поворот\|антикоперниканскому повороту]], смещая фокус с исключительно человеческих дел на взаимоотношения людей и не-людей в рамках планетарных процессов
+- **Новый климатический режим**: Концепция геоистории возникает в контексте [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]], когда становится очевидно, что Земля "отвечает" на действия человека, и мы вступаем во "всеобщее состояние войны" с планетой 
 
 ## Связанные понятия
 - [[Приземленные\|Приземленные]]
