--- a/src/site/notes/Кейс база знаний/3 Понятия/Компост.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Компост.md
@@ -5,15 +5,15 @@
 
 # Компост
 
-**Компост** — это ключевая метафора в философии [[Донна Харауэй\|Донны Харауэй]], которую она противопоставляет идеям [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]] ("компост, а не постчеловек")[cite: 341].
+**Компост** — это ключевая метафора в философии [[Донна Харауэй\|Донны Харауэй]], которую она противопоставляет идеям [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]] ("компост, а не постчеловек") 
 
 ## Суть метафоры
-- **Смешивание и становление-с**: Компост — это место, где органические остатки (люди, животные, растения, микробы) смешиваются, разлагаются и преобразуются во что-то новое (плодородную почву)[cite: 341]. Это образ **[[Кейс база знаний/3 Понятия/Симпоэзис\|симпоэзиса]]** — совместного становления и "со-творения".
-- **Отказ от индивидуализма**: В компостной куче нет отдельных, автономных индивидов. Все являются частью общего процесса гниения и возрождения. Это критика западного индивидуализма и идеи "автопоэзиса" (само-творения).
-- **Жизнь и смерть вместе**: Компост неразрывно связывает жизнь (новые ростки) и смерть (разложение). Это метафора для жизни в эпоху [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]], где нужно учиться не только "жить вместе", но и "умирать вместе"[cite: 337].
+- **Смешивание и становление-с**: Компост — это место, где органические остатки (люди, животные, растения, микробы) смешиваются, разлагаются и преобразуются во что-то новое (плодородную почву)  Это образ **[[Кейс база знаний/3 Понятия/Симпоэзис\|симпоэзиса]]** — совместного становления и "со-творения"
+- **Отказ от индивидуализма**: В компостной куче нет отдельных, автономных индивидов Все являются частью общего процесса гниения и возрождения Это критика западного индивидуализма и идеи "автопоэзиса" (само-творения)
+- **Жизнь и смерть вместе**: Компост неразрывно связывает жизнь (новые ростки) и смерть (разложение) Это метафора для жизни в эпоху [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]], где нужно учиться не только "жить вместе", но и "умирать вместе" 
 
 ## Значение для геофилософии
-- Компост — это метафора для [[Земля\|Земли]] как живого, динамичного процесса, где все виды взаимосвязаны.
-- Эта идея противостоит как антропоцентрическому взгляду на человека как на отдельное от природы существо, так и футуристическим идеям [[трансгуманизм\|трансгуманизма]] о "победе" над биологической природой. Мы — часть компоста, и наша задача — способствовать его плодородию, а не пытаться из него сбежать.
+- Компост — это метафора для [[Земля\|Земли]] как живого, динамичного процесса, где все виды взаимосвязаны
+- Эта идея противостоит как антропоцентрическому взгляду на человека как на отдельное от природы существо, так и футуристическим идеям [[трансгуманизм\|трансгуманизма]] о "победе" над биологической природой Мы — часть компоста, и наша задача — способствовать его плодородию, а не пытаться из него сбежать
 
 
