--- a/src/site/notes/Кейс база знаний/3 Понятия/Симпоэзис.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Симпоэзис.md
@@ -4,16 +4,16 @@
 
 # Симпоэзис
 
-**Симпоэзис (Sympoiesis)** — это термин, популяризированный [[Донна Харауэй\|Донной Харауэй]], который означает **"со-творение" или "создание-вместе"** (*making-with*).
+**Симпоэзис (Sympoiesis)** — это термин, популяризированный [[Донна Харауэй\|Донной Харауэй]], который означает **"со-творение" или "создание-вместе"** (*making-with*)
 
-## Симпоэзис vs. Автопоэзис
-- **Автопоэзис ("само-творение")**: Традиционная биологическая и философская концепция, которая описывает системы (например, живые организмы) как автономные, самодостаточные и самопроизводящиеся.
-- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: [[Донна Харауэй\|Харауэй]] утверждает, что ничто не создает себя само. Любой организм, любая система — это результат сложных, коллективных и взаимозависимых процессов. **"Ничто не делает себя само. Ничто не является само-организующимся"**.
+## Симпоэзис vs Автопоэзис
+- **Автопоэзис ("само-творение")**: Традиционная биологическая и философская концепция, которая описывает системы (например, живые организмы) как автономные, самодостаточные и самопроизводящиеся
+- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: [[Донна Харауэй\|Харауэй]] утверждает, что ничто не создает себя само Любой организм, любая система — это результат сложных, коллективных и взаимозависимых процессов **"Ничто не делает себя само Ничто не является само-организующимся"**
 
 ## Ключевые идеи
-- **Коэволюция**: Симпоэзис — это фундаментальный принцип коэволюции. [cite_start]Например, человек и собака эволюционировали вместе, формируя друг друга[cite: 342].
-- **Отказ от индивидуализма**: Этот концепт подрывает идею замкнутого, автономного индивида. Мы все — часть сложных сборок и коллективов, человеческих и нечеловеческих.
-- **Практика для [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]]**: Симпоэзис — это ключевая практика для выживания на [[Поврежденная земля\|поврежденной земле]]. Она требует от нас признания нашей взаимозависимости с другими видами и совместного создания миров.
-- [cite_start]**[[Кейс база знаний/3 Понятия/Компост\|Компост]]**: Метафора [[Кейс база знаний/3 Понятия/Компост\|компоста]] является идеальной иллюстрацией симпоэзиса: в компостной куче разные организмы совместно преобразуют смерть и распад в плодородную жизнь[cite: 341].
+- **Коэволюция**: Симпоэзис — это фундаментальный принцип коэволюции [cite_start]Например, человек и собака эволюционировали вместе, формируя друг друга 
+- **Отказ от индивидуализма**: Этот концепт подрывает идею замкнутого, автономного индивида Мы все — часть сложных сборок и коллективов, человеческих и нечеловеческих
+- **Практика для [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]]**: Симпоэзис — это ключевая практика для выживания на [[Поврежденная земля|поврежденной земле Она требует от нас признания нашей взаимозависимости с другими видами и совместного создания миров
+- [cite_start]**[[Кейс база знаний/3 Понятия/Компост\|Компост]]**: Метафора [[Кейс база знаний/3 Понятия/Компост\|компоста]] является идеальной иллюстрацией симпоэзиса: в компостной куче разные организмы совместно преобразуют смерть и распад в плодородную жизнь 
 
 
