--- a/src/site/notes/Кейс база знаний/3 Понятия/Территория.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Территория.md
@@ -4,20 +4,20 @@
 
 # Территория
 
-В философии [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]] **территория** — это не просто географическое пространство, а **любая упорядоченная, кодированная и ограниченная система**.
+В философии [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]] **территория** — это не просто географическое пространство, а **любая упорядоченная, кодированная и ограниченная система**
 
 ## [[Земля vs Территория\|Земля vs Территория]]
 Это фундаментальная оппозиция в их [[геофилософия\|геофилософии]]:
 - **Территория**:
-    - **Ограничивает и кодирует**: Территория накладывает границы, правила, законы. [cite_start]Это может быть территория государства, семьи, научная парадигма или даже личная привычка[cite: 764, 829].
-    - [cite_start]**Связана с разметкой**: [[Валерий Подорога\|Подорога]] отмечает, что разум [[Иммануил Кант\|Канта]] "размечает землю", то есть превращает ее в территорию[cite: 671].
-    - **Связана с [[Ретерриторизация\|ретерриторизацией]]**: Это процесс создания или восстановления территорий.
+    - **Ограничивает и кодирует**: Территория накладывает границы, правила, законы [cite_start]Это может быть территория государства, семьи, научная парадигма или даже личная привычка 
+    - [cite_start]**Связана с разметкой**: [[Валерий Подорога\|Подорога]] отмечает, что разум [[Иммануил Кант\|Канта]] "размечает землю", то есть превращает ее в территорию 
+    - **Связана с [[Ретерриторизация\|ретерриторизацией]]**: Это процесс создания или восстановления территорий
 - **[[Земля\|Земля]]**:
-    - **Освобождает**: Земля — это сила, которая подрывает любую территорию. [cite_start]Это пространство чистых интенсивностей, потоков и "линий ускользания"[cite: 764].
-    - **Не размечена**: Она противостоит превращению в карту.
-    - **Связана с [[Детерриторизация\|детерриторизацией]]**: Это процесс разрушения и выхода за пределы территорий.
+    - **Освобождает**: Земля — это сила, которая подрывает любую территорию [cite_start]Это пространство чистых интенсивностей, потоков и "линий ускользания" 
+    - **Не размечена**: Она противостоит превращению в карту
+    - **Связана с [[Детерриторизация\|детерриторизацией]]**: Это процесс разрушения и выхода за пределы территорий
 
 ## Создание территории
-- [cite_start]Территория создается с помощью **[[Ритурнель\|ритурнели]]**[cite: 869]. Напевая мелодию в хаотичном пространстве, мы создаем временный, упорядоченный центр — территорию.
-- [cite_start][[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] пишут, что [[Земля\|Земля]] — это "интенсивная точка в самой глубине территории", которая постоянно угрожает ее разрушить изнутри[cite: 873].
+- [cite_start]Территория создается с помощью **[[Ритурнель\|ритурнели]]**  Напевая мелодию в хаотичном пространстве, мы создаем временный, упорядоченный центр — территорию
+- [cite_start][[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] пишут, что [[Земля\|Земля]] — это "интенсивная точка в самой глубине территории", которая постоянно угрожает ее разрушить изнутри 
 
