--- a/src/site/notes/Кейс база знаний/4 Авторы/Аристотель.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Аристотель.md
@@ -4,11 +4,11 @@
 
 # Аристотель
 
-Древнегреческий философ, ученик [[Кейс база знаний/4 Авторы/Платон\|Платона]].
+Древнегреческий философ, ученик [[Платон|Платона
 
 ## Упоминания в курсе
-- **Предшественник**: Упоминается как один из ключевых античных авторов, писавших трактаты "О природе", что делает его одним из далеких предшественников [[геофилософия\|геофилософии]].
-- **Критика**: В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] его модель, где активная **форма** подчиняет пассивную **материю**, приводится как философское основание для **петро-маскулинности** — идеологии покорения "пассивной" земли-материи.
+- **Предшественник**: Упоминается как один из ключевых античных авторов, писавших трактаты "О природе", что делает его одним из далеких предшественников [[геофилософия|геофилософии
+- **Критика**: В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] его модель, где активная **форма** подчиняет пассивную **материю**, приводится как философское основание для **петро-маскулинности** — идеологии покорения "пассивной" земли-материи
 
 
 
