--- a/src/site/notes/Кейс база знаний/4 Авторы/Барад, Карен.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Барад, Карен.md
@@ -4,12 +4,12 @@
 
 # Барад, Карен
 
-Американский феминистский теоретик и философ науки, чьи идеи важны для [[Кейс база знаний/2 Темы/Практическая геофилософия\|практического аспекта геофилософии]].
+Американский феминистский теоретик и философ науки, чьи идеи важны для [[Практическая геофилософия|практического аспекта геофилософии
 
 ## Вклад в геофилософию
-- **[[Жить в касании\|Жить в касании]]**: Это ее ключевой концепт, упомянутый в [[Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]]. "Касание" — это не отстраненное наблюдение, а фундаментальное **взаимодействие** с миром, которое всегда несет в себе **риск** и взаимное изменение.
-- **Преодоление дуализмов**: Ее работа направлена на преодоление разрыва между субъектом и объектом, наблюдателем и наблюдаемым.
-- **Применение**: Концепция "жизни в касании" предлагается как практическая установка для геофилософии — осознанное, ответственное и рискованное со-бытие с [[Земля\|Землей]].
+- **[[Жить в касании\|Жить в касании]]**: Это ее ключевой концепт, упомянутый в [[Лекция 01 - Введение Когда закончилась Земля|первой лекции "Касание" — это не отстраненное наблюдение, а фундаментальное **взаимодействие** с миром, которое всегда несет в себе **риск** и взаимное изменение
+- **Преодоление дуализмов**: Ее работа направлена на преодоление разрыва между субъектом и объектом, наблюдателем и наблюдаемым
+- **Применение**: Концепция "жизни в касании" предлагается как практическая установка для геофилософии — осознанное, ответственное и рискованное со-бытие с [[Земля|Землей
 
 
 
