--- a/src/site/notes/Кейс база знаний/4 Авторы/Берг, Томас.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Берг, Томас.md
@@ -4,12 +4,12 @@
 
 # Берг, Томас
 
-Научный журналист, автор книги "[[Книга - Театр мира (Берг)\|Театр мира]]", которая стала основой для [[Лекция 10 - Карты и картография (Берг и Латур)\|десятой лекции]] об [[Кейс база знаний/2 Темы/История картографии\|истории картографии]].
+Научный журналист, автор книги "[[Книга - Театр мира (Берг)\|Театр мира]]", которая стала основой для [[Лекция 10 - Карты и картография (Берг и Латур)\|десятой лекции]] об [[История картографии|истории картографии
 
 ## Основные идеи
-- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Берг утверждает, что карты — это не просто технические инструменты, а **способы структурирования мира**, отражающие мировоззрение своей эпохи.
-- **"Весь мир — театр"**: Он прослеживает эту метафору до атласа [[Абрахам Ортелий\|Абрахама Ортелия]], который представил мир как зрелище.
-- **История карт**: В его книге прослеживается эволюция карт от мифологических и сакральных до прагматических и научных, показывая, как менялось отношение человека к пространству и [[Земля\|Земле]].
+- **[[Карта как мировоззрение\|Карта как мировоззрение]]**: Берг утверждает, что карты — это не просто технические инструменты, а **способы структурирования мира**, отражающие мировоззрение своей эпохи
+- **"Весь мир — театр"**: Он прослеживает эту метафору до атласа [[Абрахам Ортелий\|Абрахама Ортелия]], который представил мир как зрелище
+- **История карт**: В его книге прослеживается эволюция карт от мифологических и сакральных до прагматических и научных, показывая, как менялось отношение человека к пространству и [[Земля|Земле
 
 
 
