--- a/src/site/notes/Кейс база знаний/4 Авторы/Брайдотти, Рози.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Брайдотти, Рози.md
@@ -4,11 +4,11 @@
 
 # Брайдотти, Рози
 
-Итальянско-австралийская феминистская философ, одна из ведущих теоретиков [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]].
+Итальянско-австралийская феминистская философ, одна из ведущих теоретиков [[Постгуманизм|постгуманизма
 
 ## Вклад в геофилософию
-- **[[Опасный постгуманизм\|Опасный постгуманизм]]**: В [[Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)\|четвертой лекции]] используется ее концепция "опасного постгуманизма" для описания технологий (например, автономное оружие), которые действуют без контроля человека и несут угрозу. Это один из аспектов [[Поврежденная земля\|поврежденной земли]].
-- **Критика [[Теория Геи\|теории Геи]]**: В [[Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур)\|седьмой лекции]] она критикует теорию [[Джеймс Лавлок\|Джеймса Лавлока]] за **технофобность** и игнорирование социального конструктивизма.
+- **[[Опасный постгуманизм\|Опасный постгуманизм]]**: В [[Кейс база знаний/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)\|четвертой лекции]] используется ее концепция "опасного постгуманизма" для описания технологий (например, автономное оружие), которые действуют без контроля человека и несут угрозу Это один из аспектов [[Поврежденная земля|поврежденной земли
+- **Критика [[Теория Геи\|теории Геи]]**: В [[Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур)\|седьмой лекции]] она критикует теорию [[Джеймс Лавлок\|Джеймса Лавлока]] за **технофобность** и игнорирование социального конструктивизма
 
 
 
