--- a/src/site/notes/Кейс база знаний/4 Авторы/Лавлок, Джеймс.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Лавлок, Джеймс.md
@@ -4,13 +4,13 @@
 
 # Лавлок, Джеймс
 
-Британский ученый, эколог и футуролог. Создатель **[[Теория Геи\|теории Геи]]**.
+Британский ученый, эколог и футуролог Создатель **[[Теория Геи\|теории Геи]]**
 
 ## Вклад в геофилософию
-- **[[Теория Геи\|Теория Геи]]**: В 1970-е годы Лавлок выдвинул гипотезу, согласно которой [[Земля\|Земля]] является единой, саморегулирующейся системой (сверх-организмом), где живые организмы и неживая среда тесно взаимосвязаны для поддержания условий, пригодных для жизни.
-- **[[Маргаритковый мир\|Маргаритковый мир]]**: Для иллюстрации своей теории он создал знаменитую модель "Маргариткового мира", где планета с черными и белыми маргаритками сама регулирует свою температуру.
-- **Антропный принцип**: Его теория опирается на антропный принцип — идею об уникальности жизни на Земле.
-- **Влияние**: Несмотря на критику за антропоморфность и метафоричность, его теория оказала огромное влияние на экологическое движение и была подхвачена философами, такими как [[Бруно Латур\|Бруно Латур]].
+- **[[Теория Геи\|Теория Геи]]**: В 1970-е годы Лавлок выдвинул гипотезу, согласно которой [[Земля\|Земля]] является единой, саморегулирующейся системой (сверх-организмом), где живые организмы и неживая среда тесно взаимосвязаны для поддержания условий, пригодных для жизни
+- **[[Маргаритковый мир\|Маргаритковый мир]]**: Для иллюстрации своей теории он создал знаменитую модель "Маргариткового мира", где планета с черными и белыми маргаритками сама регулирует свою температуру
+- **Антропный принцип**: Его теория опирается на антропный принцип — идею об уникальности жизни на Земле
+- **Влияние**: Несмотря на критику за антропоморфность и метафоричность, его теория оказала огромное влияние на экологическое движение и была подхвачена философами, такими как [[Бруно Латур
 
 
 
