--- a/src/site/notes/Кейс база знаний/4 Авторы/Латур, Бруно.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Латур, Бруно.md
@@ -5,25 +5,25 @@
 
 # Латур, Бруно
 
-Французский философ, антрополог и социолог науки, один из ключевых мыслителей в современной геофилософии.
+Французский философ, антрополог и социолог науки, один из ключевых мыслителей в современной геофилософии
 
 ## Вклад в геофилософию
 
-### 1. Критика [[Кейс база знаний/2 Темы/Смерть больших нарративов\|больших нарративов]]
-- **"Великий Пан умер"**: [[Бруно Латур\|Латур]] провозглашает смерть Природы (с большой буквы) как универсального конструкта, противопоставленного Культуре. Это открывает путь к [[Кейс база знаний/2 Темы/Множественность (миров, природ, земель)\|мультинатурализму]][cite: 565, 571].
-- **Проклятие Атласа**: Критикует традиционную репрезентацию Земли (например, глобус) за создание иллюзии единого, гладкого и безпроблемного объекта. Это скрывает сложность и конфликтность планетарных процессов[cite: 417, 419].
+### 1 Критика [[Кейс база знаний/2 Темы/Смерть больших нарративов\|больших нарративов]]
+- **"Великий Пан умер"**: [[Бруно Латур\|Латур]] провозглашает смерть Природы (с большой буквы) как универсального конструкта, противопоставленного Культуре Это открывает путь к [[Кейс база знаний/2 Темы/Множественность (миров, природ, земель)\|мультинатурализму]] 
+- **Проклятие Атласа**: Критикует традиционную репрезентацию Земли (например, глобус) за создание иллюзии единого, гладкого и безпроблемного объекта Это скрывает сложность и конфликтность планетарных процессов 
 
-### 2. [[Теория Геи\|Теория Геи]] и [[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]
-- [[Бруно Латур\|Латур]] переосмысливает [[Теория Геи\|теорию Геи]] [[Джеймс Лавлок\|Джеймса Лавлока]], представляя [[Гея\|Гею]] не как организм, а как **сеть взаимосвязанных актантов** (людей и не-людей)[cite: 406].
-- **[[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]**: Призывает перейти от традиционной истории, где Земля — пассивный фон, к геоистории, где Земля признается **активным политическим агентом**[cite: 407].
+### 2 [[Теория Геи\|Теория Геи]] и [[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]
+- [[Бруно Латур\|Латур]] переосмысливает [[Теория Геи\|теорию Геи]] [[Джеймс Лавлок\|Джеймса Лавлока]], представляя [[Гея\|Гею]] не как организм, а как **сеть взаимосвязанных актантов** (людей и не-людей) 
+- **[[Кейс база знаний/3 Понятия/Геоистория\|Геоистория]]**: Призывает перейти от традиционной истории, где Земля — пассивный фон, к геоистории, где Земля признается **активным политическим агентом** 
 
-### 3. [[Кейс база знаний/2 Темы/Политическая земля\|Политическая земля]] и [[Приземленные\|Приземленные]]
-- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Критикует кантовскую метафору за то, что она заставила философию "вращаться вокруг субъекта"[cite: 378, 836].
-- **"[[Приземленные\|Приземленные]]"**: Вводит понятие "приземленных" как тех, кто отказался от иллюзии отделенности от планеты и осознал свою укорененность в ней. Они занимаются "земной наукой", признающей свою вовлеченность[cite: 425, 428, 433].
-- **Договор с Землей**: В диалоге с [[Карл Шмитт\|Карлом Шмиттом]] и его концепцией [[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]], [[Бруно Латур\|Латур]] ставит вопрос о возможности заключения нового политического договора, который бы включал Землю как полноправного участника для предотвращения будущих войн за ресурсы и климат[cite: 441, 456, 879].
+### 3 [[Кейс база знаний/2 Темы/Политическая земля\|Политическая земля]] и [[Приземленные\|Приземленные]]
+- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Критикует кантовскую метафору за то, что она заставила философию "вращаться вокруг субъекта" 
+- **"[[Приземленные\|Приземленные]]"**: Вводит понятие "приземленных" как тех, кто отказался от иллюзии отделенности от планеты и осознал свою укорененность в ней Они занимаются "земной наукой", признающей свою вовлеченность 
+- **Договор с Землей**: В диалоге с [[Карл Шмитт\|Карлом Шмиттом]] и его концепцией [[Кейс база знаний/3 Понятия/Номос земли\|Номос земли]], [[Бруно Латур\|Латур]] ставит вопрос о возможности заключения нового политического договора, который бы включал Землю как полноправного участника для предотвращения будущих войн за ресурсы и климат 
 
-### 4. [[Критика картографии\|Критика картографии]]
-- Вводит различие между [[Синоптическая vs Навигационная интерпретация\|синоптической]] (обзорной, эстетической) и **навигационной** (практической, событийной) интерпретацией карт. Призывает понимать карту не как отражение, а как активный инструмент в процессе **"картографирования"**[cite: 66, 71].
+### 4 [[Критика картографии\|Критика картографии]]
+- Вводит различие между [[Синоптическая vs Навигационная интерпретация\|синоптической]] (обзорной, эстетической) и **навигационной** (практической, событийной) интерпретацией карт Призывает понимать карту не как отражение, а как активный инструмент в процессе **"картографирования"** 
 
 
 
