--- a/src/site/notes/Кейс база знаний/4 Авторы/Платон.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Платон.md
@@ -4,11 +4,11 @@
 
 # Платон
 
-Древнегреческий философ, ученик Сократа и учитель [[Кейс база знаний/4 Авторы/Аристотель\|Аристотеля]].
+Древнегреческий философ, ученик Сократа и учитель [[Аристотель|Аристотеля
 
 ## Упоминания в курсе
-- **Предшественник**: Упоминается как один из античных философов, чьи размышления (например, об Атлантиде или о сферической форме Земли в диалоге "Федон") можно считать частью предыстории [[геофилософия\|геофилософии]].
-- **Философия высоты**: [[Жиль Делёз\|Жиль Делёз]] в "Логике смысла" критикует платонизм как "философию высоты" (мир идей), противопоставляя ее "философии поверхности".
+- **Предшественник**: Упоминается как один из античных философов, чьи размышления (например, об Атлантиде или о сферической форме Земли в диалоге "Федон") можно считать частью предыстории [[геофилософия|геофилософии
+- **Философия высоты**: [[Жиль Делёз\|Жиль Делёз]] в "Логике смысла" критикует платонизм как "философию высоты" (мир идей), противопоставляя ее "философии поверхности"
 
 
 
