--- a/src/site/notes/Кейс база знаний/4 Авторы/Подорога, Валерий.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Подорога, Валерий.md
@@ -4,12 +4,12 @@
 
 # Подорога, Валерий
 
-Русскоязычный философ, известный своим оригинальным проектом **[[! ЛАНДШАФТ/Метафизика ландшафта\|метафизики ландшафта]]**.
+Русскоязычный философ, известный своим оригинальным проектом **[[! ЛАНДШАФТ/Метафизика ландшафта\|метафизики ландшафта]]**
 
 ## Вклад в геофилософию
-- **[[! ЛАНДШАФТ/Метафизика ландшафта\|! ЛАНДШАФТ/Метафизика ландшафта]]**: Это его ключевая концепция, "топология философского мышления". Подорога исследует, как конкретное пространство, ландшафт и телесность философа формируют его идеи. "Всякая мысль пространственна".
-- **[[Ландшафт\|Ландшафт]] как синтез**: Он анализирует философские "ландшафты" [[Сёрен Кьеркегор\|Кьеркегора]] (Земля-море), [[Фридрих Ницше\|Ницше]] (Энгадин) и [[Мартин Хайдеггер\|Хайдеггера]] (Шварцвальд), показывая, как биография, география, тело и текст сплетаются в единое "[[Земля произведений\|произведение]]".
-- **Интерпретация феноменологии**: Подорога связывает [[Кейс база знаний/2 Темы/Геофеноменология\|геофеноменологию]] [[Эдмунд Гуссерль\|Гуссерля]] и [[Морис Мерло-Понти\|Мерло-Понти]] с идеей восприятия [[Земля\|Земли]] как "тела Другого".
+- **[[! ЛАНДШАФТ/Метафизика ландшафта\|! ЛАНДШАФТ/Метафизика ландшафта]]**: Это его ключевая концепция, "топология философского мышления" Подорога исследует, как конкретное пространство, ландшафт и телесность философа формируют его идеи "Всякая мысль пространственна"
+- **[[Ландшафт\|Ландшафт]] как синтез**: Он анализирует философские "ландшафты" [[Сёрен Кьеркегор\|Кьеркегора]] (Земля-море), [[Фридрих Ницше\|Ницше]] (Энгадин) и [[Мартин Хайдеггер\|Хайдеггера]] (Шварцвальд), показывая, как биография, география, тело и текст сплетаются в единое "[[Земля произведений\|произведение]]"
+- **Интерпретация феноменологии**: Подорога связывает [[Кейс база знаний/2 Темы/Геофеноменология\|геофеноменологию]] [[Эдмунд Гуссерль\|Гуссерля]] и [[Морис Мерло-Понти\|Мерло-Понти]] с идеей восприятия [[Земля\|Земли]] как "тела Другого"
 
 
 
