--- a/src/site/notes/Кейс база знаний/4 Авторы/Такер, Юджин.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Такер, Юджин.md
@@ -4,11 +4,11 @@
 
 # Такер, Юджин
 
-Американский философ и теоретик медиа, связанный с [[Темные теории\|темными теориями]] и [[Кейс база знаний/2 Темы/Спекулятивный поворот\|спекулятивным поворотом]].
+Американский философ и теоретик медиа, связанный с [[Темные теории\|темными теориями]] и [[Спекулятивный поворот|спекулятивным поворотом
 
 ## Упоминания в курсе
-- **Представитель "[[Темные теории\|темного материализма]]"**: Его работа посвящена исследованию "мира-без-нас", ужаса, заложенного в самой реальности.
-- **Депрессивный разум Канта**: В [[Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)\|третьей лекции]] упоминается его интерпретация философии [[Иммануил Кант\|Канта]]. Такер утверждает, что строгие системы Канта были созданы "депрессивным разумом" как попытка жестко дисциплинировать себя и защититься от хаоса. Это приводит к идее "мысли без нас" или "философии без философов", когда основания для мысли находятся не в человеке, а в [[геологическое\|геологическом]].
+- **Представитель "[[Темные теории\|темного материализма]]"**: Его работа посвящена исследованию "мира-без-нас", ужаса, заложенного в самой реальности
+- **Депрессивный разум Канта**: В [[Кейс база знаний/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)\|третьей лекции]] упоминается его интерпретация философии [[Иммануил Кант|Канта Такер утверждает, что строгие системы Канта были созданы "депрессивным разумом" как попытка жестко дисциплинировать себя и защититься от хаоса Это приводит к идее "мысли без нас" или "философии без философов", когда основания для мысли находятся не в человеке, а в [[геологическое|геологическом
 
 
 
