--- a/src/site/notes/Кейс база знаний/4 Авторы/Хуэй, Юк.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Хуэй, Юк.md
@@ -4,13 +4,13 @@
 
 # Хуэй, Юк
 
-Гонконгский философ, занимающийся философией техники.
+Гонконгский философ, занимающийся философией техники
 
 ## Вклад в геофилософию
-- **[[Искусственная земля\|Искусственная земля]]**: В [[Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур)\|седьмой лекции]] его работа используется для интерпретации [[Теория Геи\|теории Геи]]. Хуэй утверждает, что [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]] — это завершение создания **"искусственной земли"** как кибернетической системы.
-- **Органы-механицизм**: Он описывает [[Земля\|Землю]] в [[Теория Геи\|теории Геи]] как "органы-механицизм" или "живой механизм", соединяя природное и техническое.
-- **Земля осознает себя**: Развивая мысль [[Джеймс Лавлок\|Лавлока]], Хуэй говорит, что благодаря технологиям (спутникам, камерам) [[Гея\|Гея]] впервые смогла "увидеть отражение своего прекрасного лица" и осознать себя.
-- **Геометрия как техника памяти**: В [[Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)\|шестой лекции]] цитируется его анализ работ [[Эдмунд Гуссерль\|Гуссерля]] и [[Жак Деррида\|Дерриды]], где он описывает геометрию (и письмо) как **технику овнешнения памяти**, которая позволяет нам иметь "прошлое, в котором мы никогда не жили".
+- **[[Искусственная земля\|Искусственная земля]]**: В [[Кейс база знаний/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур)\|седьмой лекции]] его работа используется для интерпретации [[Теория Геи\|теории Геи Хуэй утверждает, что [[Антропоцен]] — это завершение создания **"искусственной земли"** как кибернетической системы
+- **Органы-механицизм**: Он описывает [[Земля\|Землю]] в [[Теория Геи\|теории Геи]] как "органы-механицизм" или "живой механизм", соединяя природное и техническое
+- **Земля осознает себя**: Развивая мысль [[Джеймс Лавлок\|Лавлока]], Хуэй говорит, что благодаря технологиям (спутникам, камерам) [[Гея\|Гея]] впервые смогла "увидеть отражение своего прекрасного лица" и осознать себя
+- **Геометрия как техника памяти**: В [[Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)\|шестой лекции]] цитируется его анализ работ [[Эдмунд Гуссерль\|Гуссерля]] и [[Жак Деррида\|Дерриды]], где он описывает геометрию (и письмо) как **технику овнешнения памяти**, которая позволяет нам иметь "прошлое, в котором мы никогда не жили"
 
 
 
