--- a/src/site/notes/Кейс база знаний/4 Авторы/Шеллинг, Фридрих.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Шеллинг, Фридрих.md
@@ -4,13 +4,13 @@
 
 # Шеллинг, Фридрих
 
-Немецкий философ, представитель немецкого идеализма и романтизма. Ключевая фигура для [[Темные теории\|темной геофилософии]].
+Немецкий философ, представитель немецкого идеализма и романтизма Ключевая фигура для [[Темные теории|темной геофилософии
 
 ## Вклад в геофилософию
-- **[[Кейс база знаний/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]**: В центре его натурфилософии лежит проблема **[[Безосновность (Грунд)\|безосновности]] (Ungrund)** — темного, иррационального, хаотического начала, из которого рождается мир.
-- **Влияние геологии**: На Шеллинга сильно повлияло зарождение геологии как науки и открытие [[Deep Time\|глубинного времени]]. Это заставило его отказаться от идеи единого первоисточника и мыслить [[Земля\|Землю]] как результат длительных, многослойных процессов.
-- **"Письмена Земли"**: Он описывал [[Земля\|Землю]] как "книгу, составленную из обломков", которую философия должна расшифровать.
-- **[[Бен Вудард\|Бен Вудард]]**: Современный философ [[Бен Вудард\|Бен Вудард]] активно обращается к Шеллингу, чтобы разработать свою концепцию [[Геологическое как бессознательное\|геологического как бессознательного]].
+- **[[Кейс база знаний/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]**: В центре его натурфилософии лежит проблема **[[Безосновность (Грунд)\|безосновности]] (Ungrund)** — темного, иррационального, хаотического начала, из которого рождается мир
+- **Влияние геологии**: На Шеллинга сильно повлияло зарождение геологии как науки и открытие [[Deep Time\|глубинного времени Это заставило его отказаться от идеи единого первоисточника и мыслить [[Земля]] как результат длительных, многослойных процессов
+- **"Письмена Земли"**: Он описывал [[Земля\|Землю]] как "книгу, составленную из обломков", которую философия должна расшифровать
+- **[[Бен Вудард\|Бен Вудард]]**: Современный философ [[Бен Вудард\|Бен Вудард]] активно обращается к Шеллингу, чтобы разработать свою концепцию [[Геологическое как бессознательное|геологического как бессознательного
 
 
 
