--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -4,35 +4,35 @@
 
 # Обо мне
 
-![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
+![[andrey photo circle 1png|]
 
 ~~~~ 
 Меня зовут Андрей Сычёв, рад вас видеть на своем персональном сайте!
-Если сказать о себе одним словом, то я — исследователь.
+Если сказать о себе одним словом, то я — исследователь
 ~~~~ 
 Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных ветки:  
 — Маркетинговые и социальные исследования, 
-— Психологические путешествия с использованием метода ландшафтная аналитика.
+— Психологические путешествия с использованием метода ландшафтная аналитика
 
 
 
 **==Коротко про ИССЛЕДОВАНИЯ==**
 
-Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
+Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса
 
 Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
-- Развивал навыки использования AI в исследованиях в  [AI LAB](https://ai-lab.tech) у Дмитрия Соловьева. 
-- Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
-- Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
+- Развивал навыки использования AI в исследованиях в  [AI LAB](https://ai-labtech) у Дмитрия Соловьева 
+- Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindsetorg/)  у Глеба Калинина
+- Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blogfastunaru/insightchat) в компании Tiburon Research 
 
-→→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
+→→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] 
 
 
 **==Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ==**
 
-Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция. Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики. 
+Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики 
 
-Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта.
+Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта
 
 Как работает ландшафтная аналитика:
 
@@ -40,9 +40,9 @@
 - Взаимодействие с ландшафтом рождает инсайты –  природа отражает содержание психики и дает важные подсказки,
 - Движение и физическая нагрузка не менее важны, чем взаимодействие с ландшафтными объектами,
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
-- Участники делятся друг с другом полученным опытом.
+- Участники делятся друг с другом полученным опытом
 
-→→ Больше про психологические путешествия в нашем [телеграм-канале ](https://t.me/outsideinsight)
+→→ Больше про психологические путешествия в нашем [телеграм-канале ](https://tme/outsideinsight)
 
-МОИ КОНТАКТЫ: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
+МОИ КОНТАКТЫ: [Telegram](https://tme/andreyscyhev), [E-mail ](mailto:sychevonline@gmailcom)
 
