--- a/src/site/notes/Кейс база знаний/2 Темы/Критика антропоцентризма.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Критика антропоцентризма.md
@@ -4,20 +4,20 @@
 
 # Критика антропоцентризма
 
-**Критика антропоцентризма** — одна из центральных тем современной [[геофилософия\|геофилософии]] и [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]]. Она заключается в смещении человека с привилегированной позиции центра мироздания и меры всех вещей[cite: 566].
+**Критика антропоцентризма** — одна из центральных тем современной [[геофилософия\|геофилософии]] и [[Постгуманизм|постгуманизма Она заключается в смещении человека с привилегированной позиции центра мироздания и меры всех вещей 
 
 ## Основные аргументы
 
 - **"Великие унижения" человечества**: [[Зигмунд Фрейд\|Зигмунд Фрейд]] описал историю науки как серию ударов по человеческому нарциссизму:
-    - **[[Николай Коперник\|Николай Коперник]]**: Земля (и, следовательно, человек) — не центр Вселенной[cite: 208].
-    - **[[Чарльз Дарвин\|Чарльз Дарвин]]**: Человек — не венец творения, а продукт эволюции[cite: 208].
-    - **[[Зигмунд Фрейд\|Зигмунд Фрейд]]**: Человек — не хозяин в собственном доме (сознании), им управляет бессознательное[cite: 208, 569].
-    - Лектор добавляет к списку [[Карл Маркс\|Маркса]] (человек определяется экономическими отношениями) и [[Мишель Фуко\|Фуко]] (человек определяется властными отношениями)[cite: 209, 569, 570].
+    - **[[Николай Коперник\|Николай Коперник]]**: Земля (и, следовательно, человек) — не центр Вселенной 
+    - **[[Чарльз Дарвин\|Чарльз Дарвин]]**: Человек — не венец творения, а продукт эволюции 
+    - **[[Зигмунд Фрейд\|Зигмунд Фрейд]]**: Человек — не хозяин в собственном доме (сознании), им управляет бессознательное 
+    - Лектор добавляет к списку [[Карл Маркс\|Маркса]] (человек определяется экономическими отношениями) и [[Мишель Фуко\|Фуко]] (человек определяется властными отношениями) 
 
 - **Философский анти-антропоцентризм**:
-    - **[[Кейс база знаний/2 Темы/Спекулятивный поворот\|Спекулятивный поворот]]** пытается помыслить реальность, существующую независимо от человека, критикуя [[корреляционизм\|корреляционизм]][cite: 539, 280].
-    - **[[Тимоти Мортон\|Тимоти Мортон]]** с его концепцией [[Кейс база знаний/3 Понятия/Гиперобъекты\|гиперобъектов]] показывает, что существуют сущности (как глобальное потепление), которые несоизмеримы с человеком и не поддаются полному контролю[cite: 207].
-    - **[[Донна Харауэй\|Донна Харауэй]]** предлагает перейти от [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцену]], чтобы сместить фокус с человека на взаимосвязи всех живых существ[cite: 256, 260].
+    - **[[Кейс база знаний/2 Темы/Спекулятивный поворот\|Спекулятивный поворот]]** пытается помыслить реальность, существующую независимо от человека, критикуя [[корреляционизм\|корреляционизм]] 
+    - **[[Тимоти Мортон\|Тимоти Мортон]]** с его концепцией [[Кейс база знаний/3 Понятия/Гиперобъекты\|гиперобъектов]] показывает, что существуют сущности (как глобальное потепление), которые несоизмеримы с человеком и не поддаются полному контролю 
+    - **[[Донна Харауэй\|Донна Харауэй]]** предлагает перейти от [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцену]], чтобы сместить фокус с человека на взаимосвязи всех живых существ
 
-- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Этот поворот, начатый [[Эдмунд Гуссерль\|Гуссерлем]], также является формой критики антропоцентризма. Он направлен против тенденции "вращать" всю философию вокруг **субъекта** и предлагает вернуть [[Земля\|Землю]] как общее, до-субъективное основание опыта[cite: 279, 927].
+- **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: Этот поворот, начатый [[Эдмунд Гуссерль\|Гуссерлем]], также является формой критики антропоцентризма Он направлен против тенденции "вращать" всю философию вокруг **субъекта** и предлагает вернуть [[Земля\|Землю]] как общее, до-субъективное основание опыта
 
