--- a/src/site/notes/Кейс база знаний/2 Темы/Критические исследования картографии.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Критические исследования картографии.md
@@ -4,19 +4,19 @@
 
 # Критические исследования картографии
 
-**Критические исследования картографии** — это современное направление, которое рассматривает карты не как нейтральные и объективные отражения реальности, а как сложные культурные, политические и технологические артефакты[cite: 734].
+**Критические исследования картографии** — это современное направление, которое рассматривает карты не как нейтральные и объективные отражения реальности, а как сложные культурные, политические и технологические артефакты 
 
 ## Ключевые идеи
 
-- **[[Критика репрезентации\|Критика репрезентации]]**: Основной тезис заключается в том, что карта — это не просто репрезентация (отражение) мира. Она активно **конструирует** мир и является его частью[cite: 795]. Карта не "точна" или "неточна", а **"работает" или "не работает"** в конкретной ситуации[cite: 795].
+- **[[Критика репрезентации\|Критика репрезентации]]**: Основной тезис заключается в том, что карта — это не просто репрезентация (отражение) мира Она активно **конструирует** мир и является его частью  Карта не "точна" или "неточна", а **"работает" или "не работает"** в конкретной ситуации 
 
-- **Карта как событие**: Карта — это не статичный объект, а динамический процесс, **"картографирование"**[cite: 795, 797]. Она всегда является результатом множества действий: измерений, записей, решений о том, что включить, а что исключить.
+- **Карта как событие**: Карта — это не статичный объект, а динамический процесс, **"картографирование"**  Она всегда является результатом множества действий: измерений, записей, решений о том, что включить, а что исключить
 
 - **[[Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]] ([[Бруно Латур\|Бруно Латур]])**:
-    - **Синоптическая (обзорная) интерпретация**: Это восприятие карты как законченного, эстетического "образа", на который мы смотрим со стороны (например, карта на стене в картине [[Ян Вермеер\|Вермеера]])[cite: 799, 801]. Это создает иллюзию объективности и оторванности от практики.
-    - **Навигационная интерпретация**: Это понимание карты как **инструмента**, который используется в действии. Карта всегда работает в паре со "штурманом" — тем, кто находится в реальном мире, видит риски и сверяет маршрут[cite: 804]. Карта — это совокупность научных записей и наблюдений, оживающая только в процессе навигации[cite: 805, 806].
+    - **Синоптическая (обзорная) интерпретация**: Это восприятие карты как законченного, эстетического "образа", на который мы смотрим со стороны (например, карта на стене в картине [[Ян Вермеер\|Вермеера]])  Это создает иллюзию объективности и оторванности от практики
+    - **Навигационная интерпретация**: Это понимание карты как **инструмента**, который используется в действии Карта всегда работает в паре со "штурманом" — тем, кто находится в реальном мире, видит риски и сверяет маршрут  Карта — это совокупность научных записей и наблюдений, оживающая только в процессе навигации 
 
 ## Значение для геофилософии
-Критическая картография позволяет увидеть, что любая попытка "нанести на карту" [[Земля\|Землю]] или философскую мысль — это не нейтральный акт, а властное действие, которое создает определенную версию реальности[cite: 789].
+Критическая картография позволяет увидеть, что любая попытка "нанести на карту" [[Земля\|Землю]] или философскую мысль — это не нейтральный акт, а властное действие, которое создает определенную версию реальности 
 
 
