--- a/src/site/notes/Кейс база знаний/2 Темы/Множественность (миров, природ, земель).md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Множественность (миров, природ, земель).md
@@ -5,15 +5,15 @@
 
 # Множественность (миров, природ, земель)
 
-**Множественность** — это ключевая идея современной геофилософии, которая приходит на смену универсальным и единичным понятиям, таким как "Природа", "Мир" или "Земля"[cite: 598]. Этот сдвиг является прямым следствием [[Кейс база знаний/2 Темы/Смерть больших нарративов\|смерти больших нарративов]].
+**Множественность** — это ключевая идея современной геофилософии, которая приходит на смену универсальным и единичным понятиям, таким как "Природа", "Мир" или "Земля"  Этот сдвиг является прямым следствием [[Смерть больших нарративов|смерти больших нарративов
 
 ## Конец единства
-- **[[Кейс база знаний/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]]**: [[Жан-Франсуа Лиотар\|Жан-Франсуа Лиотар]] утверждал, что эпоха универсальных объяснительных систем (религии, прогресса, науки) закончилась[cite: 589].
-- **Смерть Природы**: [[Бруно Латур\|Бруно Латур]] провозгласил, что "Великий Пан умер"[cite: 593]. "Природа" (с большой буквы) была конструктом, который существовал только в оппозиции к "Культуре"[cite: 573].
-- **Конец Земли**: Аналогичным образом, "закончилась" и Земля как единое, пассивное, целостное понятие ("матушка-земля")[cite: 601]. [[Тимоти Мортон\|Тимоти Мортон]] называет свою философию "философией после конца мира", где "мир" как дешевая, всеобъемлющая концепция больше не работает[cite: 593, 595].
+- **[[Кейс база знаний/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]]**: [[Жан-Франсуа Лиотар\|Жан-Франсуа Лиотар]] утверждал, что эпоха универсальных объяснительных систем (религии, прогресса, науки) закончилась 
+- **Смерть Природы**: [[Бруно Латур\|Бруно Латур]] провозгласил, что "Великий Пан умер"  "Природа" (с большой буквы) была конструктом, который существовал только в оппозиции к "Культуре" 
+- **Конец Земли**: Аналогичным образом, "закончилась" и Земля как единое, пассивное, целостное понятие ("матушка-земля")  [[Тимоти Мортон\|Тимоти Мортон]] называет свою философию "философией после конца мира", где "мир" как дешевая, всеобъемлющая концепция больше не работает 
 
 ## Переход к множественности
-- **От мультикультурализма к мультинатурализму**: [[Бруно Латур\|Латур]] и [[Эдуарду Вивейруш де Кастру\|Эдуарду Вивейруш де Кастру]] утверждают, что мы должны признать не только множество культур, но и **множество природ**[cite: 598]. Разные народы живут не просто в разных культурах, но в разных мирах с разными онтологиями.
-- **Множество земель**: Геофилософия работает не с одной Землей, а с множеством земель[cite: 362]. Это могут быть концептуальные земли ([[Жиль Делёз\|Делёз]]), политические земли ([[Карл Шмитт\|Карл Шмитт]]), темные земли ([[Джорджо Агамбен\|Джорджо Агамбен]]) и т.д.
-- **[[Кейс база знаний/3 Понятия/Ризома\|Ризома]]**: Концепт [[Жиль Делёз\|Делёза]] и [[Феликс Гваттари\|Гваттари]] является моделью для мышления о множественности. Это неиерархическая сеть без центра, где все точки могут быть связаны друг с другом[cite: 449].
+- **От мультикультурализма к мультинатурализму**: [[Бруно Латур\|Латур]] и [[Эдуарду Вивейруш де Кастру\|Эдуарду Вивейруш де Кастру]] утверждают, что мы должны признать не только множество культур, но и **множество природ**  Разные народы живут не просто в разных культурах, но в разных мирах с разными онтологиями
+- **Множество земель**: Геофилософия работает не с одной Землей, а с множеством земель  Это могут быть концептуальные земли ([[Жиль Делёз\|Делёз]]), политические земли ([[Карл Шмитт\|Карл Шмитт]]), темные земли ([[Джорджо Агамбен\|Джорджо Агамбен]]) и тд
+- **[[Кейс база знаний/3 Понятия/Ризома\|Ризома]]**: Концепт [[Жиль Делёз\|Делёза]] и [[Феликс Гваттари\|Гваттари]] является моделью для мышления о множественности Это неиерархическая сеть без центра, где все точки могут быть связаны друг с другом 
 
