--- a/src/site/notes/Кейс база знаний/2 Темы/Политики заботы.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Политики заботы.md
@@ -5,19 +5,19 @@
 
 # Политики заботы
 
-**Политики заботы** — это этико-политическая концепция, разработанная [[Донна Харауэй\|Донной Харауэй]] и другими феминистскими мыслителями, которая ставит в центр не права и законы, а практики заботы, взаимопомощи и поддержания жизни[cite: 266].
+**Политики заботы** — это этико-политическая концепция, разработанная [[Донна Харауэй\|Донной Харауэй]] и другими феминистскими мыслителями, которая ставит в центр не права и законы, а практики заботы, взаимопомощи и поддержания жизни 
 
 ## Основные принципы
 
-- **Забота о себе и о других**: Политики заботы включают как заботу о собственном благополучии, так и создание сообществ, основанных на взаимоподдержке и инклюзивности[cite: 267].
-- **Распространение на не-людей**: В отличие от традиционной политики, которая фокусируется на людях, политики заботы распространяются на животных, растения, экосистемы и всю планету. Речь идет о **безопасности всех тел**, человеческих и нечеловеческих[cite: 268].
-- **Противостояние эксплуатации**: Эти практики противостоят логике эксплуатации и инструментализации, которая характерна для капитализма и антропоцентризма[cite: 583].
+- **Забота о себе и о других**: Политики заботы включают как заботу о собственном благополучии, так и создание сообществ, основанных на взаимоподдержке и инклюзивности 
+- **Распространение на не-людей**: В отличие от традиционной политики, которая фокусируется на людях, политики заботы распространяются на животных, растения, экосистемы и всю планету Речь идет о **безопасности всех тел**, человеческих и нечеловеческих 
+- **Противостояние эксплуатации**: Эти практики противостоят логике эксплуатации и инструментализации, которая характерна для капитализма и антропоцентризма 
 
 ## [[Донна Харауэй\|Донна Харауэй]] и [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]]
-- Для [[Донна Харауэй\|Харауэй]] политики заботы — это ключевая практика выживания в эпоху [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]] на [[Поврежденная земля\|поврежденной земле]][cite: 257].
-- **"Оставаться со смутой" (*Staying with the trouble*)**: Это означает не искать простых решений или путей эвакуации с планеты, а учиться жить и умирать вместе со всеми существами, разделяя общую уязвимость.
-- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: Практики заботы реализуются через "со-творение" — совместное становление с другими видами. [[Донна Харауэй\|Харауэй]] приводит пример сообщества, где дети из интернатов заботятся о городских голубях, создавая альянс, который помогает и тем, и другим[cite: 270, 271].
-- **[[Кейс база знаний/3 Понятия/Компост\|Компост]], а не постчеловек**: Забота — это работа в "компостной куче", где люди и не-люди смешиваются, поддерживая друг друга[cite: 263].
+- Для [[Донна Харауэй\|Харауэй]] политики заботы — это ключевая практика выживания в эпоху [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцена]] на [[Поврежденная земля\|поврежденной земле]] 
+- **"Оставаться со смутой" (*Staying with the trouble*)**: Это означает не искать простых решений или путей эвакуации с планеты, а учиться жить и умирать вместе со всеми существами, разделяя общую уязвимость
+- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: Практики заботы реализуются через "со-творение" — совместное становление с другими видами [[Донна Харауэй\|Харауэй]] приводит пример сообщества, где дети из интернатов заботятся о городских голубях, создавая альянс, который помогает и тем, и другим 
+- **[[Кейс база знаний/3 Понятия/Компост\|Компост]], а не постчеловек**: Забота — это работа в "компостной куче", где люди и не-люди смешиваются, поддерживая друг друга 
 
 
 
