--- a/src/site/notes/Кейс база знаний/2 Темы/Практическая геофилософия.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Практическая геофилософия.md
@@ -5,17 +5,17 @@
 
 # Практическая геофилософия
 
-**Практическая геофилософия** — это применение идей геофилософии в повседневной жизни. Она утверждает, что любая жизнь — это уже жизнь в геофилософии, поскольку мы всегда находимся в определенном ландшафте и встроены в земные процессы[cite: 604].
+**Практическая геофилософия** — это применение идей геофилософии в повседневной жизни Она утверждает, что любая жизнь — это уже жизнь в геофилософии, поскольку мы всегда находимся в определенном ландшафте и встроены в земные процессы 
 
 ## Как жить, когда Земля закончилась?
 После "смерти" [[Земля\|Земли]] как единого, пассивного объекта, геофилософия предлагает несколько практических установок:
 
-- **Быть приземленными**: Термин [[Бруно Латур\|Бруно Латура]], означающий осознание своей неразрывной связи с планетой и отказ от иллюзии "парения над миром"[cite: 605]. Философия должна уйти от универсальных абстракций и "заземлиться"[cite: 606].
+- **Быть приземленными**: Термин [[Бруно Латур\|Бруно Латура]], означающий осознание своей неразрывной связи с планетой и отказ от иллюзии "парения над миром"  Философия должна уйти от универсальных абстракций и "заземлиться" 
 
-- **Замечать разрывы и преодолевать их**: Это практика выхода из привычных дуализмов (субъект-объект, природа-культура) и осознания своей запутанности в мире[cite: 605].
+- **Замечать разрывы и преодолевать их**: Это практика выхода из привычных дуализмов (субъект-объект, природа-культура) и осознания своей запутанности в мире 
 
-- **Быть чутким к географии**: Развивать внимание к ландшафтам, картам, местам[cite: 608]. Это может быть как реальное исследование местности, так и работа с "внутренней географией" — осознанием того, как ландшафты (реальные или воображаемые) влияют на наши мысли и чувства ([[Карл Ясперс\|Карл Ясперс]] и его "внутреннее море")[cite: 528, 608].
+- **Быть чутким к географии**: Развивать внимание к ландшафтам, картам, местам  Это может быть как реальное исследование местности, так и работа с "внутренней географией" — осознанием того, как ландшафты (реальные или воображаемые) влияют на наши мысли и чувства ([[Карл Ясперс\|Карл Ясперс]] и его "внутреннее море") 
 
-- **Жить в касании**: Понятие [[Карен Барад\|Карен Барад]], которое описывает наше взаимодействие с миром не как отстраненное наблюдение, а как **взаимное соприкосновение**, которое всегда несет в себе **риск** и взаимное изменение[cite: 609]. Жить в касании с [[Земля\|Землей]] — значит признавать ее агентность и нашу уязвимость[cite: 610].
+- **Жить в касании**: Понятие [[Карен Барад\|Карен Барад]], которое описывает наше взаимодействие с миром не как отстраненное наблюдение, а как **взаимное соприкосновение**, которое всегда несет в себе **риск** и взаимное изменение  Жить в касании с [[Земля\|Землей]] — значит признавать ее агентность и нашу уязвимость 
 
 
