--- a/src/site/notes/Кейс база знаний/2 Темы/Смерть больших нарративов.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Смерть больших нарративов.md
@@ -4,25 +4,25 @@
 
 # Смерть больших нарративов
 
-**Смерть больших (или мета-) нарративов** — это центральная концепция постмодернистской философии, наиболее четко сформулированная [[Жан-Франсуа Лиотар\|Жаном-Франсуа Лиотаром]] в работе "Состояние постмодерна"[cite: 589].
+**Смерть больших (или мета-) нарративов** — это центральная концепция постмодернистской философии, наиболее четко сформулированная [[Жан-Франсуа Лиотар\|Жаном-Франсуа Лиотаром]] в работе "Состояние постмодерна" 
 
 ## Что такое большой нарратив?
-Большой нарратив — это всеобъемлющая, универсальная история, которая претендует на то, чтобы объяснить мир в целом и легитимировать определенные социальные и политические порядки.
+Большой нарратив — это всеобъемлющая, универсальная история, которая претендует на то, чтобы объяснить мир в целом и легитимировать определенные социальные и политические порядки
 
 **Примеры:**
-- **Религия**: История о сотворении мира и спасении.
-- **Просвещение**: История о прогрессе человеческого разума, который ведет к свободе.
-- **Марксизм**: История о классовой борьбе, ведущей к бесклассовому обществу.
-- **Наука**: История о накоплении объективного знания, которое раскрывает тайны вселенной.
+- **Религия**: История о сотворении мира и спасении
+- **Просвещение**: История о прогрессе человеческого разума, который ведет к свободе
+- **Марксизм**: История о классовой борьбе, ведущей к бесклассовому обществу
+- **Наука**: История о накоплении объективного знания, которое раскрывает тайны вселенной
 
 ## Почему они "умерли"?
-- По Лиотару, после Второй мировой войны и других катастроф XX века вера в эти универсальные истории была подорвана[cite: 589].
-- Стало очевидно, что они часто служили инструментами власти и подавления, а не освобождения.
-- На смену большим нарративам приходит **множество малых, локальных "микро-нарративов"**, которые не претендуют на универсальность[cite: 590].
+- По Лиотару, после Второй мировой войны и других катастроф XX века вера в эти универсальные истории была подорвана 
+- Стало очевидно, что они часто служили инструментами власти и подавления, а не освобождения
+- На смену большим нарративам приходит **множество малых, локальных "микро-нарративов"**, которые не претендуют на универсальность 
 
 ## Связь с геофилософией
-- **Смерть Природы и Земли**: Концепции "Природы" и "Земли" (с большой буквы) сами по себе являются **большими нарративами**[cite: 589]. Они представляют планету как единое, пассивное, универсальное целое.
-- **[[Бруно Латур\|Бруно Латур]]** провозглашает, что **"Великий Пан умер"**, имея в виду конец этого универсального понятия Природы[cite: 593].
-- **[[Тимоти Мортон\|Тимоти Мортон]]** говорит о "конце мира" как о конце этой всеобъемлющей концепции[cite: 593].
-- **[[Кейс база знаний/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]**: "Смерть" единой Земли открывает путь к геофилософской идее о **множестве земель**, множестве природ и миров[cite: 598, 601]. Геофилософия работает с этими локальными, фрагментированными и часто противоречивыми реальностями.
+- **Смерть Природы и Земли**: Концепции "Природы" и "Земли" (с большой буквы) сами по себе являются **большими нарративами**  Они представляют планету как единое, пассивное, универсальное целое
+- **[[Бруно Латур\|Бруно Латур]]** провозглашает, что **"Великий Пан умер"**, имея в виду конец этого универсального понятия Природы 
+- **[[Тимоти Мортон\|Тимоти Мортон]]** говорит о "конце мира" как о конце этой всеобъемлющей концепции 
+- **[[Кейс база знаний/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]**: "Смерть" единой Земли открывает путь к геофилософской идее о **множестве земель**, множестве природ и миров  Геофилософия работает с этими локальными, фрагментированными и часто противоречивыми реальностями
 
