--- a/src/site/notes/Кейс база знаний/2 Темы/Спекулятивный поворот.md
+++ b/src/site/notes/Кейс база знаний/2 Темы/Спекулятивный поворот.md
@@ -4,22 +4,22 @@
 
 # Спекулятивный поворот
 
-**Спекулятивный поворот** (или спекулятивный реализм) — это философское движение, возникшее в середине 2000-х годов, которое ставит своей целью преодолеть доминирование "философии доступа", унаследованной от [[Иммануил Кант\|Иммануила Канта]][cite: 363, 537].
+**Спекулятивный поворот** (или спекулятивный реализм) — это философское движение, возникшее в середине 2000-х годов, которое ставит своей целью преодолеть доминирование "философии доступа", унаследованной от [[Иммануил Кант\|Иммануила Канта]] 
 
 ## Ключевая проблема: [[Критика корреляционизма\|Критика корреляционизма]]
-- **Корреляционизм** (термин [[Квентин Мейясу\|Квентина Мейясу]]) — это философская установка, согласно которой мы никогда не имеем доступа к реальности самой по себе, а только к **корреляции** (соотношению) между мышлением и бытием, субъектом и объектом[cite: 281, 539].
-- Проще говоря, мы не можем мыслить мир без мыслящего субъекта. Любая попытка помыслить реальность "снаружи" уже является актом нашего мышления "изнутри". Это "корреляционистский круг".
+- **Корреляционизм** (термин [[Квентин Мейясу\|Квентина Мейясу]]) — это философская установка, согласно которой мы никогда не имеем доступа к реальности самой по себе, а только к **корреляции** (соотношению) между мышлением и бытием, субъектом и объектом 
+- Проще говоря, мы не можем мыслить мир без мыслящего субъекта Любая попытка помыслить реальность "снаружи" уже является актом нашего мышления "изнутри" Это "корреляционистский круг"
 
 ## Цель спекулятивного поворота
-- **Мыслить "Великое Внешнее"**: Цель — найти способ философски говорить о реальности, которая существует абсолютно независимо от человека и его сознания.
+- **Мыслить "Великое Внешнее"**: Цель — найти способ философски говорить о реальности, которая существует абсолютно независимо от человека и его сознания
 - Это включает в себя размышления о таких вещах, как:
-    - **"До-историческое"**: Мир до появления человека и сознания.
-    - **Объекты**: Существование вещей независимо от их восприятия нами ([[Объектно-ориентированная онтология\|Объектно-ориентированная онтология]]).
-    - **Контингентность**: Идея о том, что законы природы не являются абсолютно необходимыми и могут измениться без всякой причины.
+    - **"До-историческое"**: Мир до появления человека и сознания
+    - **Объекты**: Существование вещей независимо от их восприятия нами ([[Объектно-ориентированная онтология\|Объектно-ориентированная онтология]])
+    - **Контингентность**: Идея о том, что законы природы не являются абсолютно необходимыми и могут измениться без всякой причины
 
 ## Значение для геофилософии
-- Спекулятивный поворот предоставляет философские инструменты для того, чтобы мыслить **[[Земля\|Землю]] как автономного, независимого от человека агента**[cite: 547].
-- Он позволяет задавать вопросы о геологических процессах, которые происходили до человека и будут происходить после него, не сводя их к человеческому восприятию.
-- [[Бен Вудард\|Бен Вудард]], [[Тимоти Мортон\|Тимоти Мортон]] и другие геофилософы активно используют идеи спекулятивного поворота для разработки своих концепций [[Безосновность (Грунд)\|безосновности]], [[Кейс база знаний/3 Понятия/Гиперобъекты\|гиперобъектов]] и [[Темная экология\|темной экологии]].
+- Спекулятивный поворот предоставляет философские инструменты для того, чтобы мыслить **[[Земля\|Землю]] как автономного, независимого от человека агента** 
+- Он позволяет задавать вопросы о геологических процессах, которые происходили до человека и будут происходить после него, не сводя их к человеческому восприятию
+- [[Бен Вудард\|Бен Вудард]], [[Тимоти Мортон\|Тимоти Мортон]] и другие геофилософы активно используют идеи спекулятивного поворота для разработки своих концепций [[Безосновность (Грунд)\|безосновности]], [[Кейс база знаний/3 Понятия/Гиперобъекты\|гиперобъектов]] и [[Темная экология|темной экологии
 
 
