--- a/src/site/notes/Кейс база знаний/3 Понятия/Антропоцен.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Антропоцен.md
@@ -5,14 +5,14 @@
 
 # Антропоцен
 
-**Антропоцен** — это предложенное название для современной геологической эпохи, в которой деятельность человека стала доминирующей силой, влияющей на геологические и климатические процессы Земли.
+**Антропоцен** — это предложенное название для современной геологической эпохи, в которой деятельность человека стала доминирующей силой, влияющей на геологические и климатические процессы Земли
 
 ## Ключевые характеристики
-- **Начало**: Условно отсчитывается от 1712 года, когда [[Томас Ньюкомен\|Томас Ньюкомен]] создал паровой насос. Это изобретение позволило откачивать воду из угольных шахт, преодолевая природные условия и дав старт Промышленной революции.
-- **Суть**: Человек перестает быть просто одним из видов и становится геологическим агентом, чьи следы (пластик, радиоактивные изотопы, изменение состава атмосферы) будут видны в геологических слоях миллионы лет.
-- **[[Темная геофилософия\|Темная сторона]]**: Для [[Тимоти Мортон\|Тимоти Мортона]], Антропоцен — это время, когда человек превращается в "мерцающее привидение", так как его отходы и следы переживают его самого, создавая призрачную сущность.
+- **Начало**: Условно отсчитывается от 1712 года, когда [[Томас Ньюкомен\|Томас Ньюкомен]] создал паровой насос Это изобретение позволило откачивать воду из угольных шахт, преодолевая природные условия и дав старт Промышленной революции
+- **Суть**: Человек перестает быть просто одним из видов и становится геологическим агентом, чьи следы (пластик, радиоактивные изотопы, изменение состава атмосферы) будут видны в геологических слоях миллионы лет
+- **[[Темная геофилософия\|Темная сторона]]**: Для [[Тимоти Мортон\|Тимоти Мортона]], Антропоцен — это время, когда человек превращается в "мерцающее привидение", так как его отходы и следы переживают его самого, создавая призрачную сущность
 ## Критика и альтернативы
-- **[[Донна Харауэй\|Донна Харауэй]]** критикует термин за то, что он все еще ставит в центр Человека (*Anthropos*), пусть и в негативном ключе[cite: 358].
-- В качестве альтернативы она предлагает термин **[[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]]** — эпоху хтонических, земных существ, где акцент делается на совместном выживании и взаимосвязях всех видов на поврежденной планете.
+- **[[Донна Харауэй\|Донна Харауэй]]** критикует термин за то, что он все еще ставит в центр Человека (*Anthropos*), пусть и в негативном ключе 
+- В качестве альтернативы она предлагает термин **[[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]]** — эпоху хтонических, земных существ, где акцент делается на совместном выживании и взаимосвязях всех видов на поврежденной планете
 
 
