--- a/src/site/notes/Кейс база знаний/3 Понятия/Детерриторизация и Ретерриторизация.md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Детерриторизация и Ретерриторизация.md
@@ -5,19 +5,19 @@
 
 # Детерриторизация и Ретерриторизация
 
-**Детерриторизация** и **ретерриторизация** — это центральные концепты в философии [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]], описывающие два взаимосвязанных процесса.
+**Детерриторизация** и **ретерриторизация** — это центральные концепты в философии [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]], описывающие два взаимосвязанных процесса
 
 ## Определения
-- **[[Кейс база знаний/3 Понятия/Территория\|Территория]]**: Это не просто географическое пространство, а любая упорядоченная, кодированная система (государство, семья, язык, привычка), которая накладывает ограничения[cite: 764, 829].
-- **Детерриторизация**: Это процесс **ускользания**, выхода за пределы территории, раскодирования потоков и разрушения установленных границ[cite: 816, 829]. Это линия освобождения, связанная с [[Земля\|Землей]] как силой хаоса и творчества. "Прогулка шизофреника" — это пример постоянной детерриторизации пространства[cite: 825].
-- **Ретерриторизация**: Это процесс, обратный детерриторизации. Это **перехват** ускользающих потоков и их **пересборка** в новую, но все же ограниченную территорию[cite: 830].
+- **[[Кейс база знаний/3 Понятия/Территория\|Территория]]**: Это не просто географическое пространство, а любая упорядоченная, кодированная система (государство, семья, язык, привычка), которая накладывает ограничения 
+- **Детерриторизация**: Это процесс **ускользания**, выхода за пределы территории, раскодирования потоков и разрушения установленных границ  Это линия освобождения, связанная с [[Земля\|Землей]] как силой хаоса и творчества "Прогулка шизофреника" — это пример постоянной детерриторизации пространства 
+- **Ретерриторизация**: Это процесс, обратный детерриторизации Это **перехват** ускользающих потоков и их **пересборка** в новую, но все же ограниченную территорию 
 
 ## Взаимосвязь
-- Эти два процесса неразрывны. Любая детерриторизация может быть перехвачена и ретерриторизирована. Например, творческий прорыв (детерриторизация) может быть превращен в коммерческий продукт (ретерриторизация).
-- В то же время, любая территория содержит в себе "линии ускользания", точки потенциальной детерриторизации.
-- [[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] выделяют **абсолютную детерриторизацию** как чистую линию творчества, которая уже не может быть перехвачена.
+- Эти два процесса неразрывны Любая детерриторизация может быть перехвачена и ретерриторизирована Например, творческий прорыв (детерриторизация) может быть превращен в коммерческий продукт (ретерриторизация)
+- В то же время, любая территория содержит в себе "линии ускользания", точки потенциальной детерриторизации
+- [[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] выделяют **абсолютную детерриторизацию** как чистую линию творчества, которая уже не может быть перехвачена
 
 ## Примеры
-- **Пение птицы ([[Ритурнель\|Ритурнель]])**: Птица детерриторизирует хаос, создавая звуковую территорию.
-- **Капитализм**: Осуществляет мощную детерриторизацию старых кодов (феодальных, традиционных), но тут же ретерриторизирует все в аксиоматику денег и рынка[cite: 847].
+- **Пение птицы ([[Ритурнель\|Ритурнель]])**: Птица детерриторизирует хаос, создавая звуковую территорию
+- **Капитализм**: Осуществляет мощную детерриторизацию старых кодов (феодальных, традиционных), но тут же ретерриторизирует все в аксиоматику денег и рынка 
 
