--- a/src/site/notes/Кейс база знаний/3 Понятия/Ритурнель (Рефрен).md
+++ b/src/site/notes/Кейс база знаний/3 Понятия/Ритурнель (Рефрен).md
@@ -4,20 +4,20 @@
 
 # Ритурнель (Рефрен)
 
-**Ритурнель (Ritournelle)** — это концепт [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]] из книги "[[Тысяча плато\|Тысяча плато]]", описывающий повторяющийся мотив, мелодию или ритм, который выполняет функцию организации пространства.
+**Ритурнель (Ritournelle)** — это концепт [[Жиль Делёз\|Жиля Делёза]] и [[Феликс Гваттари\|Феликса Гваттари]] из книги "[[Тысяча плато\|Тысяча плато]]", описывающий повторяющийся мотив, мелодию или ритм, который выполняет функцию организации пространства
 
 ## Определение и функции
-- [cite_start]**Создание территории**: Основная функция ритурнели — **создавать [[Кейс база знаний/3 Понятия/Территория\|Территорию]] из хаоса**[cite: 869, 870]. Это акт упорядочивания.
+- [cite_start]**Создание территории**: Основная функция ритурнели — **создавать [[Кейс база знаний/3 Понятия/Территория\|Территорию]] из хаоса**  Это акт упорядочивания
 - **Примеры**:
-    - **Ребенок в темноте**: Ребенок напевает песенку, чтобы успокоиться и превратить пугающий хаос темноты в знакомую, безопасную территорию.
-    - [cite_start]**Хозяйка дома**: Убираясь, она напевает мотив, размечая свой дом как свою территорию[cite: 862].
-    - **Птица**: Пение птицы — это ритурнель, которым она обозначает свою территорию.
+    - **Ребенок в темноте**: Ребенок напевает песенку, чтобы успокоиться и превратить пугающий хаос темноты в знакомую, безопасную территорию
+    - [cite_start]**Хозяйка дома**: Убираясь, она напевает мотив, размечая свой дом как свою территорию 
+    - **Птица**: Пение птицы — это ритурнель, которым она обозначает свою территорию
 
 ## Ритурнель и [[Земля vs Территория\|Земля vs Территория]]
-- [cite_start]**Противостояние хаосу и границам**: [[Ритурнель\|Ритурнель]] — это сила, которая противостоит хаосу, но в то же время она **противостоит и жестким границам** [[Кейс база знаний/3 Понятия/Территория\|Территории]][cite: 871].
-- [cite_start]**"Уносит землю с собой"**: [[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] пишут, что ритурнель **"всегда уносит землю с собой"**[cite: 865, 871]. Это означает, что, создавая временную, ритмическую территорию, мы привносим в нее силу [[Земля\|Земли]] — силу [[Детерриторизация\|детерриторизации]] и освобождения.
-- **Космические ритурнели**: Существуют и нечеловеческие ритурнели — ритмы космоса, шум прибоя, звуки, которые издают молекулы. [cite_start][[Земля\|Земля]] "овладевает всеми ритурнелями"[cite: 868, 869].
+- [cite_start]**Противостояние хаосу и границам**: [[Ритурнель\|Ритурнель]] — это сила, которая противостоит хаосу, но в то же время она **противостоит и жестким границам** [[Кейс база знаний/3 Понятия/Территория\|Территории]] 
+- [cite_start]**"Уносит землю с собой"**: [[Жиль Делёз\|Делёз]] и [[Феликс Гваттари\|Гваттари]] пишут, что ритурнель **"всегда уносит землю с собой"**  Это означает, что, создавая временную, ритмическую территорию, мы привносим в нее силу [[Земля\|Земли]] — силу [[Детерриторизация\|детерриторизации]] и освобождения
+- **Космические ритурнели**: Существуют и нечеловеческие ритурнели — ритмы космоса, шум прибоя, звуки, которые издают молекулы [cite_start][[Земля\|Земля]] "овладевает всеми ритурнелями" 
 
 ## Связь с философией
-- [[Жиль Делёз\|Делёз]] утверждал, что **концепт — это тоже своего рода ритурнель**. Философия — это повторение, но всегда по-разному, это создание ритмического порядка в хаосе мысли.
+- [[Жиль Делёз\|Делёз]] утверждал, что **концепт — это тоже своего рода ритурнель** Философия — это повторение, но всегда по-разному, это создание ритмического порядка в хаосе мысли
 
