--- a/src/site/notes/Кейс база знаний/4 Авторы/Беннет, Джейн.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Беннет, Джейн.md
@@ -4,11 +4,11 @@
 
 # Беннет, Джейн
 
-Американский политический теоретик, одна из ключевых фигур **нового материализма**.
+Американский политический теоретик, одна из ключевых фигур **нового материализма**
 
 ## Упоминания в курсе
-- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] она упоминается как представительница **"[[Темные теории\|темного материализма]]"**.
-- Ее работа связана с идеей **"живой материи"** (*vibrant matter*) — признанием агентности и активности не-человеческих сущностей, даже тех, которые традиционно считались пассивными (например, мусор или металлы).
+- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] она упоминается как представительница **"[[Темные теории\|темного материализма]]"**
+- Ее работа связана с идеей **"живой материи"** (*vibrant matter*) — признанием агентности и активности не-человеческих сущностей, даже тех, которые традиционно считались пассивными (например, мусор или металлы)
 
 
 
