--- a/src/site/notes/Кейс база знаний/4 Авторы/Бибихин, Владимир.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Бибихин, Владимир.md
@@ -4,11 +4,11 @@
 
 # Бибихин, Владимир
 
-Русский философ, переводчик [[Мартин Хайдеггер\|Хайдеггера]].
+Русский философ, переводчик [[Мартин Хайдеггер|Хайдеггера
 
 ## Упоминания в курсе
-- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] его лекционный курс "Лес" приводится как пример **"светлого материализма"**.
-- В отличие от "[[Темные теории\|темного материализма]]", который подчеркивает жуткую и чуждую природу материи, подход Бибихина описывается как попытка "одомашнить" материю, осмыслить ее через знакомые категории, в том числе из классической и христианской традиций.
+- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] его лекционный курс "Лес" приводится как пример **"светлого материализма"**
+- В отличие от "[[Темные теории\|темного материализма]]", который подчеркивает жуткую и чуждую природу материи, подход Бибихина описывается как попытка "одомашнить" материю, осмыслить ее через знакомые категории, в том числе из классической и христианской традиций
 
 
 
