--- a/src/site/notes/Кейс база знаний/4 Авторы/Бродель, Фернан.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Бродель, Фернан.md
@@ -4,11 +4,11 @@
 
 # Бродель, Фернан
 
-Французский историк, представитель школы "Анналов".
+Французский историк, представитель школы "Анналов"
 
 ## Упоминания в курсе
-- В [[Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] он назван одним из предшественников [[геофилософия\|геофилософии]] и [[Кейс база знаний/3 Понятия/Геоистория\|геоистории]].
-- Его новаторство заключалось в том, что он начал систематически учитывать **географические и климатические факторы** (историю "большой длительности") при анализе исторических событий, тем самым рассматривая [[Земля\|Землю]] как активную историческую силу. [[Жиль Делёз\|Жиль Делёз]] и [[Феликс Гваттари\|Феликс Гваттари]] признавали его влияние.
+- В [[Лекция 01 - Введение Когда закончилась Земля\|первой лекции]] он назван одним из предшественников [[геофилософия\|геофилософии]] и [[Геоистория|геоистории
+- Его новаторство заключалось в том, что он начал систематически учитывать **географические и климатические факторы** (историю "большой длительности") при анализе исторических событий, тем самым рассматривая [[Земля\|Землю]] как активную историческую силу [[Жиль Делёз\|Жиль Делёз]] и [[Феликс Гваттари\|Феликс Гваттари]] признавали его влияние
 
 
 
