--- a/src/site/notes/Кейс база знаний/4 Авторы/Гваттари, Феликс.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Гваттари, Феликс.md
@@ -4,12 +4,12 @@
 
 # Гваттари, Феликс
 
-Французский психоаналитик (ученик [[Жак Лакан\|Лакана]]), политический активист и философ. Вместе с [[Жиль Делёз\|Жилем Делёзом]] является автором ключевых работ по [[геофилософия\|геофилософии]] и создателем самого термина.
+Французский психоаналитик (ученик [[Жак Лакан\|Лакана]]), политический активист и философ Вместе с [[Жиль Делёз\|Жилем Делёзом]] является автором ключевых работ по [[геофилософия\|геофилософии]] и создателем самого термина
 
 ## Вклад в геофилософию
-- **Соавторство**: Внес в совместный с [[Жиль Делёз\|Делёзом]] проект практический, политический и психоаналитический (шизоаналитический) измерения.
-- **[[Шизоанализ\|Шизоанализ]]**: Его концепция шизоанализа, противопоставленная психоанализу, напрямую связана с [[геофилософия\|геофилософией]]. "Прогулка шизофреника" — это акт **[[Детерриторизация\|детерриторизации]]** пространства.
-- **Ключевые концепты**: Является соавтором всех центральных геофилософских концептов: [[Земля vs Территория\|Земля vs Территория]], [[Детерриторизация\|Детерриторизация]], [[Кейс база знаний/3 Понятия/Ризома\|Ризома]], [[Ритурнель\|Ритурнель]], [[Номадизм\|Номадизм]].
+- **Соавторство**: Внес в совместный с [[Жиль Делёз\|Делёзом]] проект практический, политический и психоаналитический (шизоаналитический) измерения
+- **[[Шизоанализ\|Шизоанализ]]**: Его концепция шизоанализа, противопоставленная психоанализу, напрямую связана с [[геофилософия\|геофилософией "Прогулка шизофреника" — это акт **[[Детерриторизация\|Детерриторизация]]** пространства
+- **Ключевые концепты**: Является соавтором всех центральных геофилософских концептов: [[Земля vs Территория\|Земля vs Территория]], [[Детерриторизация]], [[Кейс база знаний/3 Понятия/Ризома\|Ризома]], [[Ритурнель\|Ритурнель]], [[Номадизм
 
 
 
