--- a/src/site/notes/Кейс база знаний/4 Авторы/Мерло-Понти, Морис.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Мерло-Понти, Морис.md
@@ -4,14 +4,14 @@
 
 # Мерло-Понти, Морис
 
-Французский философ-феноменолог, чьи поздние работы являются ключевыми для [[Кейс база знаний/2 Темы/Геофеноменология\|геофеноменологии]].
+Французский философ-феноменолог, чьи поздние работы являются ключевыми для [[Геофеноменология|геофеноменологии
 
 ## Вклад в геофилософию
-- **[[Кейс база знаний/3 Понятия/Плоть мира\|Плоть мира]]**: Это его центральное понятие. Мир и наше тело сделаны из одной "стихийной" ткани — плоти. [[Земля\|Земля]] является предельным выражением этой плоти, **гиперболизированной телесностью**.
-- **[[Кейс база знаний/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]**: В своих неопубликованных при жизни заметках Мерло-Понти наметил проект "трансцендентальной геологии".
-    - **[[Феноменология как археология\|Феноменология как археология]]**: Он предложил исследовать "слои" опыта, подобно тому как геологи исследуют слои земли.
-    - **[[Оседание опыта\|Оседание опыта]]**: Глобальный геологический опыт [[Земля\|Земли]] (ее [[Deep Time\|Deep Time]], ее "плотская про-история") "оседает" во множестве локальных, телесных опытов.
-- **Невидимое**: [[Земля\|Земля]] для Мерло-Понти — это "невидимая сила, позволяющая быть всему видимому", невидимое основание всего видимого мира.
+- **[[Кейс база знаний/3 Понятия/Плоть мира\|Плоть мира]]**: Это его центральное понятие Мир и наше тело сделаны из одной "стихийной" ткани — плоти [[Земля\|Земля]] является предельным выражением этой плоти, **гиперболизированной телесностью**
+- **[[Кейс база знаний/3 Понятия/Трансцендентальная геология\|Трансцендентальная геология]]**: В своих неопубликованных при жизни заметках Мерло-Понти наметил проект "трансцендентальной геологии"
+    - **[[Феноменология как археология\|Феноменология как археология]]**: Он предложил исследовать "слои" опыта, подобно тому как геологи исследуют слои земли
+    - **[[Оседание опыта\|Оседание опыта]]**: Глобальный геологический опыт [[Земля\|Земли]] (ее [[Deep Time\|Deep Time]], ее "плотская про-история") "оседает" во множестве локальных, телесных опытов
+- **Невидимое**: [[Земля\|Земля]] для Мерло-Понти — это "невидимая сила, позволяющая быть всему видимому", невидимое основание всего видимого мира
 
 
 
