--- a/src/site/notes/Кейс база знаний/4 Авторы/Харауэй, Донна.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Харауэй, Донна.md
@@ -4,14 +4,14 @@
 
 # Харауэй, Донна
 
-Американская феминистская исследовательница, биолог и философ науки. Ключевая фигура [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]] и [[Кейс база знаний/2 Темы/Политики заботы\|политик заботы]].
+Американская феминистская исследовательница, биолог и философ науки Ключевая фигура [[Кейс база знаний/2 Темы/Постгуманизм\|постгуманизма]] и [[Политики заботы|политик заботы
 
 ## Вклад в геофилософию
-- **От [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцену]]**: Харауэй критикует термин [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]] за его антропоцентризм и предлагает взамен [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]] — эпоху хтонических (земных) существ, где акцент делается на совместном выживании на [[Поврежденная земля\|поврежденной земле]].
-- **"Оставаться со смутой" (*Staying with the trouble*)**: Призыв не искать утопических решений, а учиться жить и умирать вместе со всеми видами, разделяя общую уязвимость.
-- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: Концепция "со-творения", совместного становления с другими видами (в противовес "автопоэзису" — само-творению).
-- **[[Кейс база знаний/3 Понятия/Компост\|Компост]], а не постчеловек**: Метафора, описывающая мир как смешение всех существ, где жизнь и смерть неразрывно связаны.
-- **Критика "[[Глаз Бога\|Глаза Бога]]"**: Критикует традиционную науку и философию за претензию на бестелесный, объективный взгляд "из ниоткуда". Любое знание, по Харауэй, является **ситуированным**, то есть произведенным из конкретной телесной и пространственной позиции.
+- **От [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцену]]**: Харауэй критикует термин [[Кейс база знаний/3 Понятия/Антропоцен\|Антропоцен]] за его антропоцентризм и предлагает взамен [[Кейс база знаний/3 Понятия/Хтулхуцен\|Хтулхуцен]] — эпоху хтонических (земных) существ, где акцент делается на совместном выживании на [[Поврежденная земля|поврежденной земле
+- **"Оставаться со смутой" (*Staying with the trouble*)**: Призыв не искать утопических решений, а учиться жить и умирать вместе со всеми видами, разделяя общую уязвимость
+- **[[Кейс база знаний/3 Понятия/Симпоэзис\|Симпоэзис]]**: Концепция "со-творения", совместного становления с другими видами (в противовес "автопоэзису" — само-творению)
+- **[[Кейс база знаний/3 Понятия/Компост\|Компост]], а не постчеловек**: Метафора, описывающая мир как смешение всех существ, где жизнь и смерть неразрывно связаны
+- **Критика "[[Глаз Бога\|Глаза Бога]]"**: Критикует традиционную науку и философию за претензию на бестелесный, объективный взгляд "из ниоткуда" Любое знание, по Харауэй, является **ситуированным**, то есть произведенным из конкретной телесной и пространственной позиции
 
 
 
