--- a/src/site/notes/Кейс база знаний/4 Авторы/Шварц, Елена.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Шварц, Елена.md
@@ -4,11 +4,11 @@
 
 # Шварц, Елена
 
-Русская поэтесса.
+Русская поэтесса
 
 ## Упоминания в курсе
-- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] ее стихотворение **"Земля, земля, ты ешь людей..."** приводится как художественная иллюстрация к концепции **[[Кейс база знаний/3 Понятия/Хтонь\|Хтонь]]** [[Джорджо Агамбен\|Джорджо Агамбена]].
-- Ее поэзия описывает [[Земля\|Землю]] как активную, хищную, темную силу, которая "чавкает во тьме" и "всех переживет". Это идеально соответствует идее [[Темная земля\|темной земли]], противопоставленной "светлой" [[Гея\|Гее]].
+- В [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] ее стихотворение **"Земля, земля, ты ешь людей"** приводится как художественная иллюстрация к концепции **[[Кейс база знаний/3 Понятия/Хтонь\|Хтонь]]** [[Джорджо Агамбен|Джорджо Агамбена
+- Ее поэзия описывает [[Земля\|Землю]] как активную, хищную, темную силу, которая "чавкает во тьме" и "всех переживет" Это идеально соответствует идее [[Темная земля\|темной земли]], противопоставленной "светлой" [[Гея|Гее
 
 
 
