--- a/src/site/notes/Кейс база знаний/4 Авторы/Ясперс, Карл.md
+++ b/src/site/notes/Кейс база знаний/4 Авторы/Ясперс, Карл.md
@@ -4,13 +4,13 @@
 
 # Ясперс, Карл
 
-Немецкий философ и психиатр, представитель экзистенциализма.
+Немецкий философ и психиатр, представитель экзистенциализма
 
 ## Упоминания в курсе
-- **Предшественник геофилософии**: Упоминается в [[Лекция 01 - Введение. Когда закончилась Земля\|первой лекции]] как автор, чье мышление было обусловлено ландшафтом.
-- **Ландшафт и экзистенциализм**: Приводится полушутливая цитата, что **"экзистенциализм возникает из созерцания болот в молодости"**.
-- **Внутренний ландшафт**: Ясперс, выросший вдали от моря, писал в автобиографии "я вырос с морем". Это указывает на важность **внутреннего, воображаемого ландшафта** для формирования мысли.
-- **Ностальгия**: В своей психиатрической практике он исследовал ностальгию как мощную пространственную силу, которая могла толкать людей на крайние поступки, что демонстрирует глубокую связь человека с его "родной землей".
+- **Предшественник геофилософии**: Упоминается в [[Лекция 01 - Введение Когда закончилась Земля\|первой лекции]] как автор, чье мышление было обусловлено ландшафтом
+- **Ландшафт и экзистенциализм**: Приводится полушутливая цитата, что **"экзистенциализм возникает из созерцания болот в молодости"**
+- **Внутренний ландшафт**: Ясперс, выросший вдали от моря, писал в автобиографии "я вырос с морем" Это указывает на важность **внутреннего, воображаемого ландшафта** для формирования мысли
+- **Ностальгия**: В своей психиатрической практике он исследовал ностальгию как мощную пространственную силу, которая могла толкать людей на крайние поступки, что демонстрирует глубокую связь человека с его "родной землей"
 
 
 
