--- a/src/site/notes/Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна.md
+++ b/src/site/notes/Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна.md
@@ -2,18 +2,18 @@
 {"dg-publish":true,"dg-path":"Кейс база знаний/5 Источники/Книга - Атлас Петрамодерна","permalink":"/kejs-baza-znanij/5-istochniki/kniga-atlas-petramoderna/"}
 ---
 
-# Книга: Нефть. Атлас Петрамодерна
+# Книга: Нефть Атлас Петрамодерна
 
 **Авторы:** Александр Клозе и Беньямин Штайнингер
 
-Эта книга рассматривается в [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] как пример исследования [[Кейс база знаний/2 Темы/Философия нефти и петромодерн\|философии нефти]] и [[Кейс база знаний/3 Понятия/Петромодерн\|петромодерна]].
+Эта книга рассматривается в [[Кейс база знаний/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|девятой лекции]] как пример исследования [[Кейс база знаний/2 Темы/Философия нефти и петромодерн\|философии нефти]] и [[Петромодерн|петромодерна
 
 ## Основные идеи
-- **[[Кейс база знаний/3 Понятия/Петромодерн\|Петромодерн]]**: Книга утверждает, что мы живем в эпоху, где нефть является главным агентом, определяющим все сферы современности, от экономики до культуры и даже [[сексуальность\|сексуальности]][cite: 968].
-- **[[Кейс база знаний/3 Понятия/Атлас (как жанр)\|Атлас (как жанр)]]**: Авторы используют формат атласа, чтобы картографировать невидимое, но всепроникающее влияние нефти. Атлас — это нелинейная форма знания, по которой "блуждают", а не читают от начала до конца[cite: 970, 977].
+- **[[Кейс база знаний/3 Понятия/Петромодерн\|Петромодерн]]**: Книга утверждает, что мы живем в эпоху, где нефть является главным агентом, определяющим все сферы современности, от экономики до культуры и даже [[сексуальность\|сексуальности]] 
+- **[[Кейс база знаний/3 Понятия/Атлас (как жанр)\|Атлас (как жанр)]]**: Авторы используют формат атласа, чтобы картографировать невидимое, но всепроникающее влияние нефти Атлас — это нелинейная форма знания, по которой "блуждают", а не читают от начала до конца 
 - **Скрытые связи нефти**:
-    - **Петро-маскулинность**: В "сырьевых романах" и популярной культуре создается образ мужчины-добытчика, который покоряет пассивную материю-землю[cite: 981].
-    - **Нефть и красота**: Нефтепродукты стали основой для массового производства косметики, что повлияло на стандарты красоты и гендерные роли[cite: 989].
-    - **[[Ископаемая власть\|Ископаемая власть]]**: Власть современных государств часто напрямую зависит от контроля над ископаемыми ресурсами[cite: 996].
-    - **Нефть и животные**: Богатство от продажи нефти привело к росту губительной для популяции соколов соколиной охоты в арабских странах[cite: 997].
+    - **Петро-маскулинность**: В "сырьевых романах" и популярной культуре создается образ мужчины-добытчика, который покоряет пассивную материю-землю 
+    - **Нефть и красота**: Нефтепродукты стали основой для массового производства косметики, что повлияло на стандарты красоты и гендерные роли 
+    - **[[Ископаемая власть\|Ископаемая власть]]**: Власть современных государств часто напрямую зависит от контроля над ископаемыми ресурсами 
+    - **Нефть и животные**: Богатство от продажи нефти привело к росту губительной для популяции соколов соколиной охоты в арабских странах 
 
